New formatting for vp/state loc

--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -359,7 +359,7 @@
  STATE_358:0 "STATE_358"
  STATE_359:0 "STATE_359"
  STATE_360:0 "STATE_360"
- STATE_361:0 "STATE_361"
+ STATE_361:0 "Колорадо"
  STATE_362:0 "Боулдер"
  STATE_363:0 "STATE_363"
  STATE_364:0 "Флитзам"
@@ -384,7 +384,7 @@
  STATE_383:0 "STATE_383"
  STATE_384:0 "STATE_384"
  STATE_385:0 "STATE_385"
- STATE_386:0 "STATE_386"
+ STATE_386:0 "Майтфилд"
  STATE_387:0 "STATE_387"
  STATE_388:0 "Медовый Курорт"
  STATE_389:0 "Новый Весалиполис"
@@ -417,19 +417,19 @@
  STATE_416:0 "Чикольтго"
  STATE_417:0 "STATE_417"
  STATE_418:0 "STATE_418"
- STATE_419:0 "STATE_419"
+ STATE_419:0 "Керхак"
  STATE_420:0 "Сивард Шоалс"
  STATE_421:0 "STATE_421"
- STATE_422:0 "STATE_422"
+ STATE_422:0 "Пинтоштейн"
  STATE_423:0 "STATE_423"
  STATE_424:0 "STATE_424"
  STATE_425:0 "Толл Тейл"
  STATE_426:0 "STATE_426"
- STATE_427:0 "STATE_427"
+ STATE_427:0 "Граджентл"
  STATE_428:0 "STATE_428"
  STATE_429:0 "STATE_429"
  STATE_430:0 "STATE_430"
- STATE_431:0 "STATE_431"
+ STATE_431:0 "Мэйрделькампо"
  STATE_432:0 "STATE_432"
  STATE_433:0 "Риденсфьорд"
  STATE_434:0 "STATE_434"
@@ -566,7 +566,7 @@
  STATE_565:0 "Гиппогрифф-Фоллс"
  STATE_566:0 "Дуфрост"
  STATE_567:0 "Баркфилд"
- STATE_568:0 "STATE_568"
+ STATE_568:0 "Касл Дейнджер"
  STATE_569:0 "Фладвилль"
  STATE_570:0 "Споттед Кау"
  STATE_571:0 "Сомилл-Крик"
@@ -583,27 +583,27 @@
  STATE_582:0 "STATE_582"
  STATE_583:0 "Стори"
  STATE_584:0 "Лодж Грасс"
- STATE_585:0 "STATE_585"
- STATE_586:0 "STATE_586"
+ STATE_585:0 "Мейпл Гроув"
+ STATE_586:0 "Бронко Парк"
  STATE_587:0 "Вудбьюри"
- STATE_588:0 "STATE_588"
+ STATE_588:0 "Белоземельный Лес"
  STATE_589:0 "Твин Сидарс"
  STATE_590:0 "Роадчестер"
  STATE_591:0 "Слипи-Холлоу"
  STATE_592:0 "Виннитонка"
- STATE_593:0 "STATE_593"
+ STATE_593:0 "Байндбол Вуд"
  STATE_594:0 "STATE_594"
  STATE_595:0 "Мэришь"
  STATE_596:0 "STATE_596"
  STATE_597:0 "STATE_597"
  STATE_598:0 "STATE_598"
- STATE_599:0 "STATE_599"
+ STATE_599:0 "Вайт Бридж"
  STATE_600:0 "STATE_600"
  STATE_601:0 "STATE_601"
  STATE_602:0 "Такбороу"
  STATE_603:0 "Лонгботтом"
  STATE_604:0 "Шир"
- STATE_605:0 "STATE_605"
+ STATE_605:0 "Драгон Сити"
  STATE_606:0 "Крикхоллоу"
  STATE_607:0 "Йондерхилл"
  STATE_608:0 "STATE_608"
@@ -620,7 +620,7 @@
  STATE_619:0 "STATE_619"
  STATE_620:0 "Фиштейл"
  STATE_621:0 "Бёрнсвилль"
- STATE_622:0 "STATE_622"
+ STATE_622:0 "Доббин Лейк"
  STATE_623:0 "Тротторт"
  STATE_624:0 "Чейнейт"
  STATE_625:0 "STATE_625"
@@ -629,12 +629,12 @@
  STATE_628:0 "Мyнхэд"
  STATE_629:0 "Дэппллут"
  STATE_630:0 "Роузвилль"
- STATE_631:0 "STATE_631"
+ STATE_631:0 "Инвер Хуфед Хайтс"
  STATE_632:0 "Макинкато"
- STATE_633:0 "STATE_633"
- STATE_634:0 "STATE_634"
- STATE_635:0 "STATE_635"
- STATE_636:0 "STATE_636"
+ STATE_633:0 "Винтерчила Рапидс"
+ STATE_634:0 "Хилс Гроув"
+ STATE_635:0 "Фриз Шор"
+ STATE_636:0 "Бакмингтон Бридж"
  STATE_637:0 "Ричфилд"
  STATE_638:0 "STATE_638"
  STATE_639:0 "STATE_639"
@@ -675,19 +675,19 @@
  STATE_674:0 "STATE_674"
  STATE_675:0 "STATE_675"
  STATE_676:0 "STATE_676"
- STATE_677:0 "STATE_677"
- STATE_678:0 "STATE_678"
+ STATE_677:0 "Капарисон"
+ STATE_678:0 "Кантерельф"
  STATE_679:0 "STATE_679"
  STATE_680:0 "STATE_680"
  STATE_681:0 "STATE_681"
  STATE_682:0 "Акадия Бэй"
- STATE_683:0 "STATE_683"
+ STATE_683:0 "Саддлбрэд"
  STATE_684:0 "STATE_684"
  STATE_685:0 "STATE_685"
  STATE_686:0 "STATE_686"
  STATE_687:0 "STATE_687"
  STATE_688:0 "STATE_688"
- STATE_689:0 "STATE_689"
+ STATE_689:0 "Кариоле"
  STATE_690:0 "Ванхувер"
  STATE_691:0 "STATE_691"
  STATE_692:0 "STATE_692"
@@ -697,22 +697,22 @@
  STATE_696:0 "STATE_696"
  STATE_697:0 "STATE_697"
  STATE_698:0 "STATE_698"
- STATE_699:0 "STATE_699"
- STATE_700:0 "STATE_700"
- STATE_701:0 "STATE_701"
+ STATE_699:0 "Гхарривилль"
+ STATE_700:0 "Виртдун"
+ STATE_701:0 "Роанрог"
  STATE_702:0 "STATE_702"
  STATE_703:0 "STATE_703"
  STATE_704:0 "STATE_704"
  STATE_705:0 "STATE_705"
  STATE_706:0 "STATE_706"
- STATE_707:0 "STATE_707"
+ STATE_707:0 "Тринити"
  STATE_708:0 "Сандейл"
  STATE_709:0 "STATE_709"
  STATE_710:0 "Гринхорн"
  STATE_711:0 "Оверрайд"
  STATE_712:0 "STATE_712"
  STATE_713:0 "Уайтбелл"
- STATE_714:0 "STATE_714"
+ STATE_714:0 "Салют Лэйк"
  STATE_715:0 "Хорслеана"
  STATE_716:0 "STATE_716"
  STATE_717:0 "STATE_717"
@@ -774,7 +774,7 @@
  STATE_773:0 "Кашино"
  STATE_774:0 "Земляные Поля"
  STATE_775:0 "Коньлинские Острова"
- STATE_776:0 "Отборск" #Otborsk
+ STATE_776:0 "Отборск"
  STATE_777:0 "Санкт-Петерсхуф"
  STATE_778:0 "Скакунск"
  STATE_779:0 "Королевский Остров"
@@ -783,7 +783,7 @@
  STATE_782:0 "Остров Черепа"
  STATE_783:0 "Плуга"
  STATE_784:0 "Троттингем"
- STATE_785:0 "Холмогоры" #Holmogory
+ STATE_785:0 "Холмогоры"
  STATE_786:0 "Азкабан"
  STATE_787:0 "Ставропонь"
  STATE_788:0 "Солнцево"
@@ -826,11 +826,11 @@
  STATE_825:0 "STATE_825"
  STATE_826:0 "Звездопадово"
  STATE_827:0 "STATE_827"
- STATE_828:0 "Калининберг" #Kalininberg
+ STATE_828:0 "Калининберг"
  STATE_829:0 "Гумбиннен"
  STATE_830:0 "Герингсдорф"
  STATE_831:0 "Тапиау"
- STATE_832:0 "Тильзит" #Tilsit
+ STATE_832:0 "Тильзит"
  STATE_833:0 "STATE_833"
  STATE_834:0 "STATE_834"
  STATE_835:0 "Хаукхамн"
@@ -856,21 +856,21 @@
  STATE_855:0 "STATE_855"
  STATE_856:0 "Бездна"
  STATE_857:0 "Буково"
- STATE_858:0 "Берестье" #Berest'e
+ STATE_858:0 "Берестье"
  STATE_859:0 "STATE_859"
  STATE_860:0 "Кантерин"
- STATE_861:0 "STATE_861"
+ STATE_861:0 "Коузи Нук"
  STATE_862:0 "STATE_862"
  STATE_863:0 "Вондерхуф"
- STATE_864:0 "STATE_864"
+ STATE_864:0 "Йеллоу Грасс"
  STATE_865:0 "STATE_865"
  STATE_866:0 "STATE_866"
- STATE_867:0 "STATE_867"
+ STATE_867:0 "Саддл Баттэ"
  STATE_868:0 "STATE_868"
  STATE_869:0 "Хоуп"
  STATE_870:0 "STATE_870"
- STATE_871:0 "STATE_871"
- STATE_872:0 "STATE_872"
+ STATE_871:0 "Бэлт"
+ STATE_872:0 "Йеллоуфорк"
  STATE_873:0 "Квебак"
  STATE_874:0 "STATE_874"
  STATE_875:0 "STATE_875"
@@ -879,52 +879,52 @@
  STATE_878:0 "STATE_878"
  STATE_879:0 "STATE_879"
  STATE_880:0 "Монтэкантер"
- STATE_881:0 "STATE_881"
- STATE_882:0 "STATE_882"
+ STATE_881:0 "Литтл Эпплс"
+ STATE_882:0 "Толл Гейт"
  STATE_883:0 "Саннисайд"
  STATE_884:0 "Хуффингтон"
  STATE_885:0 "STATE_885"
  STATE_886:0 "STATE_886"
  STATE_887:0 "STATE_887"
- STATE_888:0 "STATE_888"
- STATE_889:0 "STATE_889"
- STATE_890:0 "STATE_890"
+ STATE_888:0 "Эмеральд Крик"
+ STATE_889:0 "Литтл Голд"
+ STATE_890:0 "Хорсфлай"
  STATE_891:0 "STATE_891"
- STATE_892:0 "STATE_892"
- STATE_893:0 "STATE_893"
+ STATE_892:0 "Мустангборг"
+ STATE_893:0 "Роания"
  STATE_894:0 "Бридленна"
- STATE_895:0 "STATE_895"
- STATE_896:0 "STATE_896"
+ STATE_895:0 "Нейтмонтон"
+ STATE_896:0 "Каракол"
  STATE_897:0 "STATE_897"
  STATE_898:0 "STATE_898"
  STATE_899:0 "STATE_899"
  STATE_900:0 "Акорнейдж"
- STATE_901:0 "STATE_901"
- STATE_902:0 "STATE_902"
- STATE_903:0 "STATE_903"
+ STATE_901:0 "Бриддл"
+ STATE_902:0 "Бёрнт Стамп"
+ STATE_903:0 "Брездинг"
  STATE_904:0 "STATE_904"
  STATE_905:0 "STATE_905"
- STATE_906:0 "STATE_906"
- STATE_907:0 "STATE_907"
+ STATE_906:0 "Блэк Дир"
+ STATE_907:0 "Хавк Поинт"
  STATE_908:0 "STATE_908"
  STATE_909:0 "Мейрксандрия"
- STATE_910:0 "STATE_910"
- STATE_911:0 "STATE_911"
- STATE_912:0 "STATE_912"
+ STATE_910:0 "Кольтгэри"
+ STATE_911:0 "Фоал Свомпс"
+ STATE_912:0 "Фоал Локс"
  STATE_913:0 "STATE_913"
  STATE_914:0 "STATE_914"
- STATE_915:0 "STATE_915"
+ STATE_915:0 "Туртл Вэлли"
  STATE_916:0 "STATE_916"
- STATE_917:0 "STATE_917"
- STATE_918:0 "STATE_918"
- STATE_919:0 "STATE_919"
- STATE_920:0 "STATE_920"
+ STATE_917:0 "Маргинзинген"
+ STATE_918:0 "Красная Биндюга"
+ STATE_919:0 "Кингфилли"
+ STATE_920:0 "Шайнинг Три"
  STATE_921:0 "Хорсэверпорт"
  STATE_922:0 "STATE_922"
  STATE_923:0 "STATE_923"
  STATE_924:0 "STATE_924"
- STATE_925:0 "STATE_925"
- STATE_926:0 "STATE_926"
+ STATE_925:0 "Лопия"
+ STATE_926:0 "Бэлла Бронко"
  STATE_927:0 "STATE_927"
  STATE_928:0 "STATE_928"
  STATE_929:0 "STATE_929"
@@ -1257,7 +1257,7 @@
  STATE_1256:0 "Ойн Щилтджин"
  STATE_1257:0 "Клув Хот"
  STATE_1258:0 "STATE_1258"
- STATE_1259:0 "STATE_1259"
+ STATE_1259:0 "Зорау"
  STATE_1260:0 "STATE_1260"
  STATE_1261:0 "STATE_1261"
  STATE_1262:0 "STATE_1262"
