--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -359,7 +359,7 @@
  STATE_358:0 "STATE_358"
  STATE_359:0 "STATE_359"
  STATE_360:0 "STATE_360"
- STATE_361:0 "STATE_361"
+ STATE_361:0 "Colorado"
  STATE_362:0 "Boulder"
  STATE_363:0 "STATE_363"
  STATE_364:0 "Fleatsam"
@@ -384,7 +384,7 @@
  STATE_383:0 "STATE_383"
  STATE_384:0 "STATE_384"
  STATE_385:0 "STATE_385"
- STATE_386:0 "STATE_386"
+ STATE_386:0 "Mitefield"
  STATE_387:0 "STATE_387"
  STATE_388:0 "Mead Resort"
  STATE_389:0 "New Vesalipolis"
@@ -417,19 +417,19 @@
  STATE_416:0 "Chicoltgo"
  STATE_417:0 "STATE_417"
  STATE_418:0 "STATE_418"
- STATE_419:0 "STATE_419"
+ STATE_419:0 "Kerhack"
  STATE_420:0 "Seaward Shoals"
  STATE_421:0 "STATE_421"
- STATE_422:0 "STATE_422"
+ STATE_422:0 "Pintosteyn"
  STATE_423:0 "STATE_423"
  STATE_424:0 "STATE_424"
  STATE_425:0 "Tall Tale"
  STATE_426:0 "STATE_426"
- STATE_427:0 "STATE_427"
+ STATE_427:0 "Gragentle"
  STATE_428:0 "STATE_428"
  STATE_429:0 "STATE_429"
  STATE_430:0 "STATE_430"
- STATE_431:0 "STATE_431"
+ STATE_431:0 "Maredelcampo"
  STATE_432:0 "STATE_432"
  STATE_433:0 "Ridensford"
  STATE_434:0 "STATE_434"
@@ -566,7 +566,7 @@
  STATE_565:0 "Hippogriffe-Falls"
  STATE_566:0 "Dufrost"
  STATE_567:0 "Barkfield"
- STATE_568:0 "STATE_568"
+ STATE_568:0 "Castle Danger"
  STATE_569:0 "Floodville"
  STATE_570:0 "Reed Point"
  STATE_571:0 "Sawmill Creek"
@@ -583,27 +583,27 @@
  STATE_582:0 "STATE_582"
  STATE_583:0 "Story"
  STATE_584:0 "Lodge Grass"
- STATE_585:0 "STATE_585"
- STATE_586:0 "STATE_586"
+ STATE_585:0 "Maple Grove"
+ STATE_586:0 "Bronco Park"
  STATE_587:0 "Woodbury"
- STATE_588:0 "STATE_588"
+ STATE_588:0 "White Earth Forest"
  STATE_589:0 "Twin Cedars"
  STATE_590:0 "Roadschester"
  STATE_591:0 "Sleepy Hollow"
  STATE_592:0 "Whinnytonka"
- STATE_593:0 "STATE_593"
+ STATE_593:0 "Bindbole Wood"
  STATE_594:0 "STATE_594"
  STATE_595:0 "Marish"
  STATE_596:0 "STATE_596"
  STATE_597:0 "STATE_597"
  STATE_598:0 "STATE_598"
- STATE_599:0 "STATE_599"
+ STATE_599:0 "White Bridge"
  STATE_600:0 "STATE_600"
  STATE_601:0 "STATE_601"
  STATE_602:0 "Tuckborough"
  STATE_603:0 "Longbottom"
  STATE_604:0 "Shire"
- STATE_605:0 "STATE_605"
+ STATE_605:0 "Dragon City"
  STATE_606:0 "Crickhollow"
  STATE_607:0 "Yonderhill"
  STATE_608:0 "STATE_608"
@@ -620,7 +620,7 @@
  STATE_619:0 "STATE_619"
  STATE_620:0 "Fishtail"
  STATE_621:0 "Burnsville"
- STATE_622:0 "STATE_622"
+ STATE_622:0 "Dobbin Lake"
  STATE_623:0 "Trottort"
  STATE_624:0 "Cheyneigh"
  STATE_625:0 "STATE_625"
@@ -629,12 +629,12 @@
  STATE_628:0 "Moonhead"
  STATE_629:0 "Dappleluth"
  STATE_630:0 "Roseville"
- STATE_631:0 "STATE_631"
+ STATE_631:0 "Inver Hoofed Heights"
  STATE_632:0 "Mackinkato"
- STATE_633:0 "STATE_633"
- STATE_634:0 "STATE_634"
- STATE_635:0 "STATE_635"
- STATE_636:0 "STATE_636"
+ STATE_633:0 "Winterchilla Rapids"
+ STATE_634:0 "Hills Grove"
+ STATE_635:0 "Freeze Shore"
+ STATE_636:0 "Buckmington Bridge"
  STATE_637:0 "Richfield"
  STATE_638:0 "STATE_638"
  STATE_639:0 "STATE_639"
@@ -675,19 +675,19 @@
  STATE_674:0 "STATE_674"
  STATE_675:0 "STATE_675"
  STATE_676:0 "STATE_676"
- STATE_677:0 "STATE_677"
- STATE_678:0 "STATE_678"
+ STATE_677:0 "Caparison"
+ STATE_678:0 "Canterelf"
  STATE_679:0 "STATE_679"
  STATE_680:0 "STATE_680"
  STATE_681:0 "STATE_681"
  STATE_682:0 "Acadia Bay"
- STATE_683:0 "STATE_683"
+ STATE_683:0 "Saddlebred"
  STATE_684:0 "STATE_684"
  STATE_685:0 "STATE_685"
  STATE_686:0 "STATE_686"
  STATE_687:0 "STATE_687"
  STATE_688:0 "STATE_688"
- STATE_689:0 "STATE_689"
+ STATE_689:0 "Cariole"
  STATE_690:0 "Vanhoover"
  STATE_691:0 "STATE_691"
  STATE_692:0 "STATE_692"
@@ -697,22 +697,22 @@
  STATE_696:0 "STATE_696"
  STATE_697:0 "STATE_697"
  STATE_698:0 "STATE_698"
- STATE_699:0 "STATE_699"
- STATE_700:0 "STATE_700"
- STATE_701:0 "STATE_701"
+ STATE_699:0 "Gharryville"
+ STATE_700:0 "Wirtdun"
+ STATE_701:0 "Roanrog"
  STATE_702:0 "STATE_702"
  STATE_703:0 "STATE_703"
  STATE_704:0 "STATE_704"
  STATE_705:0 "STATE_705"
  STATE_706:0 "STATE_706"
- STATE_707:0 "STATE_707"
+ STATE_707:0 "Trinity"
  STATE_708:0 "Sundale"
  STATE_709:0 "STATE_709"
  STATE_710:0 "Greenhorn"
  STATE_711:0 "Override"
  STATE_712:0 "STATE_712"
  STATE_713:0 "Whitebell"
- STATE_714:0 "STATE_714"
+ STATE_714:0 "Salute Lake"
  STATE_715:0 "Horselena"
  STATE_716:0 "STATE_716"
  STATE_717:0 "STATE_717"
@@ -774,7 +774,7 @@
  STATE_773:0 "Kashino"
  STATE_774:0 "Landish Fields"
  STATE_775:0 "Kon'linskie Islands"
- STATE_776:0 "Otborsk" #Otborsk
+ STATE_776:0 "Otborsk"
  STATE_777:0 "St. Petershoof"
  STATE_778:0 "Skakunsk"
  STATE_779:0 "Korolevskiy Island"
@@ -783,7 +783,7 @@
  STATE_782:0 "Skull Island"
  STATE_783:0 "Pluga"
  STATE_784:0 "Trottingham"
- STATE_785:0 "Holmogory" #Holmogory
+ STATE_785:0 "Holmogory"
  STATE_786:0 "Azkaban"
  STATE_787:0 "Stavropon"
  STATE_788:0 "Solntsevo"
@@ -826,11 +826,11 @@
  STATE_825:0 "STATE_825"
  STATE_826:0 "Zvezdopadovo"
  STATE_827:0 "STATE_827"
- STATE_828:0 "Kalininberg" #Kalininberg
+ STATE_828:0 "Kalininberg"
  STATE_829:0 "Gumbinnen"
  STATE_830:0 "Heringsdorf"
  STATE_831:0 "Tapiau"
- STATE_832:0 "Tilsit" #Tilsit
+ STATE_832:0 "Tilsit"
  STATE_833:0 "STATE_833"
  STATE_834:0 "STATE_834"
  STATE_835:0 "Haukhamn"
@@ -859,18 +859,18 @@
  STATE_858:0 "Berest'e"
  STATE_859:0 "STATE_859"
  STATE_860:0 "Canterine"
- STATE_861:0 "STATE_861"
+ STATE_861:0 "Cozy Nook"
  STATE_862:0 "STATE_862"
  STATE_863:0 "Vanderhoof"
- STATE_864:0 "STATE_864"
+ STATE_864:0 "Yellow Grass"
  STATE_865:0 "STATE_865"
  STATE_866:0 "STATE_866"
- STATE_867:0 "STATE_867"
+ STATE_867:0 "Saddle Butte"
  STATE_868:0 "STATE_868"
  STATE_869:0 "Hope"
  STATE_870:0 "STATE_870"
- STATE_871:0 "STATE_871"
- STATE_872:0 "STATE_872"
+ STATE_871:0 "Belt"
+ STATE_872:0 "Yellowfork"
  STATE_873:0 "Quebuck"
  STATE_874:0 "STATE_874"
  STATE_875:0 "STATE_875"
@@ -879,52 +879,52 @@
  STATE_878:0 "STATE_878"
  STATE_879:0 "STATE_879"
  STATE_880:0 "Montecanter"
- STATE_881:0 "STATE_881"
- STATE_882:0 "STATE_882"
+ STATE_881:0 "Little Apples"
+ STATE_882:0 "Toll Gate"
  STATE_883:0 "Sunnyside"
  STATE_884:0 "Hoofington"
  STATE_885:0 "STATE_885"
  STATE_886:0 "STATE_886"
  STATE_887:0 "STATE_887"
- STATE_888:0 "STATE_888"
- STATE_889:0 "STATE_889"
- STATE_890:0 "STATE_890"
+ STATE_888:0 "Emerald Creek"
+ STATE_889:0 "Little Gold"
+ STATE_890:0 "Horsefly"
  STATE_891:0 "STATE_891"
- STATE_892:0 "STATE_892"
- STATE_893:0 "STATE_893"
+ STATE_892:0 "Mustangborg"
+ STATE_893:0 "Roania"
  STATE_894:0 "Bridlenna"
- STATE_895:0 "STATE_895"
- STATE_896:0 "STATE_896"
+ STATE_895:0 "Neighmonton"
+ STATE_896:0 "Caracol"
  STATE_897:0 "STATE_897"
  STATE_898:0 "STATE_898"
  STATE_899:0 "STATE_899"
  STATE_900:0 "Acornage"
- STATE_901:0 "STATE_901"
- STATE_902:0 "STATE_902"
- STATE_903:0 "STATE_903"
+ STATE_901:0 "Briddle"
+ STATE_902:0 "Burnt Stump"
+ STATE_903:0 "Brezding"
  STATE_904:0 "STATE_904"
  STATE_905:0 "STATE_905"
- STATE_906:0 "STATE_906"
- STATE_907:0 "STATE_907"
+ STATE_906:0 "Black Deer"
+ STATE_907:0 "Hawk Point"
  STATE_908:0 "STATE_908"
  STATE_909:0 "Marexandria"
- STATE_910:0 "STATE_910"
- STATE_911:0 "STATE_911"
- STATE_912:0 "STATE_912"
+ STATE_910:0 "Coltgary"
+ STATE_911:0 "Foal Swamps"
+ STATE_912:0 "Foal Locks"
  STATE_913:0 "STATE_913"
  STATE_914:0 "STATE_914"
- STATE_915:0 "STATE_915"
+ STATE_915:0 "Turtle Valley"
  STATE_916:0 "STATE_916"
- STATE_917:0 "STATE_917"
- STATE_918:0 "STATE_918"
- STATE_919:0 "STATE_919"
- STATE_920:0 "STATE_920"
+ STATE_917:0 "Marginzingen"
+ STATE_918:0 "Red Wagon"
+ STATE_919:0 "Kingfilly"
+ STATE_920:0 "Shining Tree"
  STATE_921:0 "Horseverport"
  STATE_922:0 "STATE_922"
  STATE_923:0 "STATE_923"
  STATE_924:0 "STATE_924"
- STATE_925:0 "STATE_925"
- STATE_926:0 "STATE_926"
+ STATE_925:0 "Lopia"
+ STATE_926:0 "Bella Bronco"
  STATE_927:0 "STATE_927"
  STATE_928:0 "STATE_928"
  STATE_929:0 "STATE_929"
@@ -1257,7 +1257,7 @@
  STATE_1256:0 "Oin Shiltgeen"
  STATE_1257:0 "Kluv Khot"
  STATE_1258:0 "STATE_1258"
- STATE_1259:0 "STATE_1259"
+ STATE_1259:0 "Sorau"
  STATE_1260:0 "STATE_1260"
  STATE_1261:0 "STATE_1261"
  STATE_1262:0 "STATE_1262"
