--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -654,9 +654,9 @@ VICTORY_POINTS_8915:0 "STATE_1263" #STATE_1263
 VICTORY_POINTS_5629:0 "STATE_1258" #STATE_1258
 VICTORY_POINTS_9535:0 "Sorau" #Sorau / STATE_1259
 VICTORY_POINTS_9501:0 "STATE_1259"
-VICTORY_POINTS_9447:0 "STATE_1252" #STATE_1252
+VICTORY_POINTS_9447:0 "Erdenetsagaan" #Erdenetsagaan
 VICTORY_POINTS_793:0 "Nagenhof"
-VICTORY_POINTS_9286:0 "STATE_1260" #STATE_1260
+VICTORY_POINTS_9286:0 "Khalkhgol" #Khalkhgol
 VICTORY_POINTS_9172:0 "STATE_1253" #STATE_1253
 VICTORY_POINTS_9008:0 "STATE_1262" #STATE_1262
 VICTORY_POINTS_8704:0 "STATE_1264" #STATE_1264
@@ -802,34 +802,34 @@ VICTORY_POINTS_13653:0 "South Fillydelphia"
 #YAK - Yakistan ( Crossmountain Republic )
 VICTORY_POINTS_566:0 "Yakistown" #Yakistown
 VICTORY_POINTS_4103:0 "South Yakistown"
-VICTORY_POINTS_8858:0 "STATE_1171" #STATE_1171
-VICTORY_POINTS_8973:0 "STATE_1172" #STATE_1172
-VICTORY_POINTS_4813:0 "STATE_1173" #STATE_1173
-VICTORY_POINTS_9402:0 "STATE_1175" #STATE_1175
-VICTORY_POINTS_9201:0 "STATE_1176" #STATE_1176
-VICTORY_POINTS_9300:0 "STATE_1176.1"
-VICTORY_POINTS_9645:0 "STATE_1177" #STATE_1177
-VICTORY_POINTS_9270:0 "STATE_1178" #STATE_1178
-VICTORY_POINTS_9341:0 "STATE_1178.1"
-VICTORY_POINTS_1407:0 "STATE_1179" #STATE_1179
-VICTORY_POINTS_2707:0 "STATE_1180" #STATE_1180
-VICTORY_POINTS_9404:0 "STATE_1180.1"
-VICTORY_POINTS_9733:0 "STATE_1181" #STATE_1181
-VICTORY_POINTS_9436:0 "STATE_1182" #STATE_1182
-VICTORY_POINTS_94:0 "STATE_1182.1"
-VICTORY_POINTS_2356:0 "STATE_1183" #STATE_1183
-VICTORY_POINTS_9405:0 "STATE_1183.1"
-VICTORY_POINTS_1900:0 "STATE_1183.2"
-VICTORY_POINTS_9655:0 "STATE_1183.3"
-VICTORY_POINTS_9352:0 "STATE_1184" #STATE_1184
-VICTORY_POINTS_9314:0 "STATE_1184.1"
+VICTORY_POINTS_8858:0 "Karaul" #Karaul
+VICTORY_POINTS_8973:0 "Baishint" #Baishint
+VICTORY_POINTS_4813:0 "Türgen" #Türgen
+VICTORY_POINTS_9402:0 "Bulgan" #Bulgan
+VICTORY_POINTS_9201:0 "Tolbo" #Tolbo
+VICTORY_POINTS_9300:0 "Bayan-Enger"
+VICTORY_POINTS_9645:0 "Burenkhairkhan" #Burenkhairkhan
+VICTORY_POINTS_9270:0 "Mankhan" #Mankhan
+VICTORY_POINTS_9341:0 "Khovd"
+VICTORY_POINTS_1407:0 "Tonkhil" #Tonkhil
+VICTORY_POINTS_2707:0 "Chandmani" #Chandmani
+VICTORY_POINTS_9404:0 "Baatsagaan"
+VICTORY_POINTS_9733:0 "Altai" #Altai
+VICTORY_POINTS_9436:0 "Biger" #Biger
+VICTORY_POINTS_94:0 "Taishir"
+VICTORY_POINTS_2356:0 "Bayanlig" #Bayanlig
+VICTORY_POINTS_9405:0 "Jinst"
+VICTORY_POINTS_1900:0 "Gurvantes"
+VICTORY_POINTS_9655:0 "Shivee Khuren"
+VICTORY_POINTS_9352:0 "Ölziit" #Ölziit
+VICTORY_POINTS_9314:0 "Bayankhongor"
 VICTORY_POINTS_9431:0 "Saihandale" #Saihandale / STATE_1185
-VICTORY_POINTS_9846:0 "STATE_1186" #STATE_1186
+VICTORY_POINTS_9846:0 "Noyon" #Noyon
 VICTORY_POINTS_1948:0 "STATE_1187" #STATE_1187
 VICTORY_POINTS_9243:0 "STATE_1187.1"
 VICTORY_POINTS_4081:0 "STATE_1187.2"
-VICTORY_POINTS_9570:0 "STATE_1188" #STATE_1188
-VICTORY_POINTS_5525:0 "STATE_1189" #STATE_1189
+VICTORY_POINTS_9570:0 "Bayandalai" #Bayandalai
+VICTORY_POINTS_5525:0 "Khürmen" #Khürmen
 VICTORY_POINTS_9072:0 "Karsakag" #Karsakag / STATE_1190
 VICTORY_POINTS_9160:0 "West Karsakag"
 VICTORY_POINTS_9284:0 "STATE_1191" #STATE_1191
@@ -879,9 +879,9 @@ VICTORY_POINTS_2988:0 "STATE_1229" #STATE_1229
 VICTORY_POINTS_9061:0 "Saihan Tolgod" #Saihan Tolgod / STATE_1233
 VICTORY_POINTS_3695:0 "North Saihan Tolgod"
 VICTORY_POINTS_9086:0 "West Saihan Tolgod"
-VICTORY_POINTS_9476:0 "STATE_1236" #STATE_1236
-VICTORY_POINTS_9232:0 "STATE_1237" #STATE_1237
-VICTORY_POINTS_9386:0 "STATE_1237.1"
+VICTORY_POINTS_9476:0 "Dalanzadgad" #Dalanzadgad
+VICTORY_POINTS_9232:0 "Sainshand" #Sainshand
+VICTORY_POINTS_9386:0 "Örgön"
 VICTORY_POINTS_8482:0 "STATE_1238" #STATE_1238
 VICTORY_POINTS_8258:0 "STATE_1239" #STATE_1239
 VICTORY_POINTS_8505:0 "STATE_1240" #STATE_1240
@@ -891,7 +891,7 @@ VICTORY_POINTS_8503:0 "STATE_1241.1"
 VICTORY_POINTS_8751:0 "STATE_1242" #STATE_1242
 VICTORY_POINTS_8813:0 "Modnihendi" #Modnihendi / STATE_1243
 VICTORY_POINTS_8860:0 "East Modnihendi"
-VICTORY_POINTS_2619:0 "STATE_1244" #STATE_1244
+VICTORY_POINTS_2619:0 "Altanshiree" #Altanshiree
 VICTORY_POINTS_8726:0 "STATE_1245" #STATE_1245
 VICTORY_POINTS_5027:0 "STATE_1245.1"
 VICTORY_POINTS_9004:0 "STATE_1246" #STATE_1246
@@ -902,15 +902,15 @@ VICTORY_POINTS_9163:0 "STATE_1248.1"
 VICTORY_POINTS_9087:0 "STATE_1249" #STATE_1249
 VICTORY_POINTS_379:0 "STATE_1250" #STATE_1250
 VICTORY_POINTS_2344:0 "STATE_1250.1"
-VICTORY_POINTS_9265:0 "STATE_1251" #STATE_1251
-VICTORY_POINTS_9416:0 "STATE_1251.1"
-VICTORY_POINTS_9515:0 "STATE_1251.2"
+VICTORY_POINTS_9265:0 "Dariganga" #Dariganga
+VICTORY_POINTS_9416:0 "Khatanbulag"
+VICTORY_POINTS_9515:0 "Zuunbayan"
 VICTORY_POINTS_2218:0 "Oin Shiltgeen" #Oin Shiltgeen / STATE_1256
 VICTORY_POINTS_5061:0 "North Oin Shiltgeen"
 VICTORY_POINTS_8942:0 "STATE_1261" #STATE_1261
 VICTORY_POINTS_9016:0 "Holy Jak grove"
 VICTORY_POINTS_1760:0 "STATE_1266" #STATE_1266
-VICTORY_POINTS_9136:0 "STATE_847" #STATE_847
+VICTORY_POINTS_9136:0 "Yolyn Am" #Yolyn Am
 VICTORY_POINTS_7945:0 "STATE_852" #STATE_852
 
 #TTT - Doglum's passage
