--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -539,7 +539,7 @@
  STATE_538:0 "STATE_538"
  STATE_539:0 "STATE_539"
  STATE_540:0 "STATE_540"
- STATE_541:0 "STATE_541"
+ STATE_541:0 "Govi-Altai"
  STATE_542:0 "STATE_542"
  STATE_543:0 "Lonesand"
  STATE_544:0 "Sundown"
@@ -842,17 +842,17 @@
  STATE_841:0 "STATE_841"
  STATE_842:0 "World's End"
  STATE_843:0 "STATE_843"
- STATE_844:0 "STATE_844"
- STATE_845:0 "STATE_845"
+ STATE_844:0 "Gurvan Saikhan"
+ STATE_845:0 "Tavan Bogd"
  STATE_846:0 "STATE_846"
- STATE_847:0 "STATE_847"
- STATE_848:0 "STATE_848"
- STATE_849:0 "STATE_849"
- STATE_850:0 "STATE_850"
- STATE_851:0 "STATE_851"
+ STATE_847:0 "Yolyn Am"
+ STATE_848:0 "Dari Ovoo"
+ STATE_849:0 "Otgontenger"
+ STATE_850:0 "Altan-Hohii"
+ STATE_851:0 "Suvraga Khairkhan"
  STATE_852:0 "STATE_852"
- STATE_853:0 "STATE_853"
- STATE_854:0 "STATE_854"
+ STATE_853:0 "Humstay-Uuls"
+ STATE_854:0 "Bogd Khan"
  STATE_855:0 "STATE_855"
  STATE_856:0 "Bezdna"
  STATE_857:0 "Bukhovo"
@@ -1113,7 +1113,7 @@
  STATE_1112:0 "STATE_1112"
  STATE_1113:0 "STATE_1113"
  STATE_1114:0 "STATE_1114"
- STATE_1115:0 "STATE_1115"
+ STATE_1115:0 "Burkhan Khaldun"
  STATE_1116:0 "STATE_1116"
  STATE_1117:0 "STATE_1117"
  STATE_1118:0 "STATE_1118"
@@ -1169,25 +1169,25 @@
  STATE_1168:0 "STATE_1168"
  STATE_1169:0 "STATE_1169"
  STATE_1170:0 "STATE_1170"
- STATE_1171:0 "STATE_1171"
- STATE_1172:0 "STATE_1172"
- STATE_1173:0 "STATE_1173"
+ STATE_1171:0 "Karaul"
+ STATE_1172:0 "Baishint"
+ STATE_1173:0 "Türgen"
  STATE_1174:0 "Yakistown"
- STATE_1175:0 "STATE_1175"
- STATE_1176:0 "STATE_1176"
- STATE_1177:0 "STATE_1177"
- STATE_1178:0 "STATE_1178"
- STATE_1179:0 "STATE_1179"
- STATE_1180:0 "STATE_1180"
- STATE_1181:0 "STATE_1181"
- STATE_1182:0 "STATE_1182"
- STATE_1183:0 "STATE_1183"
- STATE_1184:0 "STATE_1184"
+ STATE_1175:0 "Bulgan"
+ STATE_1176:0 "Tolbo"
+ STATE_1177:0 "Burenkhairkhan"
+ STATE_1178:0 "Mankhan"
+ STATE_1179:0 "Tonkhil"
+ STATE_1180:0 "Chandmani"
+ STATE_1181:0 "Altai"
+ STATE_1182:0 "Biger"
+ STATE_1183:0 "Bayanlig"
+ STATE_1184:0 "Ölziit"
  STATE_1185:0 "Saihandale"
- STATE_1186:0 "STATE_1186"
+ STATE_1186:0 "Noyon"
  STATE_1187:0 "STATE_1187"
- STATE_1188:0 "STATE_1188"
- STATE_1189:0 "STATE_1189"
+ STATE_1188:0 "Bayandalai"
+ STATE_1189:0 "Khürmen"
  STATE_1190:0 "Karsakag"
  STATE_1191:0 "STATE_1191"
  STATE_1192:0 "STATE_1192"
@@ -1233,24 +1233,24 @@
  STATE_1232:0 "Sarlag Khot"
  STATE_1233:0 "Saihan Tolgod"
  STATE_1234:0 "STATE_1234"
- STATE_1235:0 "STATE_1235"
- STATE_1236:0 "STATE_1236"
- STATE_1237:0 "STATE_1237"
+ STATE_1235:0 "Sutai-Hairhan"
+ STATE_1236:0 "Dalanzadgad"
+ STATE_1237:0 "Sainshand"
  STATE_1238:0 "STATE_1238"
  STATE_1239:0 "STATE_1239"
  STATE_1240:0 "STATE_1240"
  STATE_1241:0 "STATE_1241"
  STATE_1242:0 "STATE_1242"
  STATE_1243:0 "Modnihendi"
- STATE_1244:0 "STATE_1244"
+ STATE_1244:0 "Altanshiree"
  STATE_1245:0 "STATE_1245"
  STATE_1246:0 "STATE_1246"
  STATE_1247:0 "STATE_1247"
  STATE_1248:0 "STATE_1248"
  STATE_1249:0 "STATE_1249"
  STATE_1250:0 "STATE_1250"
- STATE_1251:0 "STATE_1251"
- STATE_1252:0 "STATE_1252"
+ STATE_1251:0 "Dariganga"
+ STATE_1252:0 "Erdenetsagaan"
  STATE_1253:0 "STATE_1253"
  STATE_1254:0 "Mörön"
  STATE_1255:0 "Oatmeal Island"
@@ -1258,7 +1258,7 @@
  STATE_1257:0 "Kluv Khot"
  STATE_1258:0 "STATE_1258"
  STATE_1259:0 "Sorau"
- STATE_1260:0 "STATE_1260"
+ STATE_1260:0 "Khalkhgol"
  STATE_1261:0 "STATE_1261"
  STATE_1262:0 "STATE_1262"
  STATE_1263:0 "STATE_1263"
