--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -539,7 +539,7 @@
  STATE_538:0 "STATE_538"
  STATE_539:0 "STATE_539"
  STATE_540:0 "STATE_540"
- STATE_541:0 "STATE_541"
+ STATE_541:0 "Говь-Алтай"
  STATE_542:0 "STATE_542"
  STATE_543:0 "Лоунсэнд"
  STATE_544:0 "Сандаун"
@@ -842,17 +842,17 @@
  STATE_841:0 "STATE_841"
  STATE_842:0 "Конец Мира"
  STATE_843:0 "STATE_843"
- STATE_844:0 "STATE_844"
- STATE_845:0 "STATE_845"
+ STATE_844:0 "Гурван-Сайхан"
+ STATE_845:0 "Таван-Богдо"
  STATE_846:0 "STATE_846"
- STATE_847:0 "STATE_847"
- STATE_848:0 "STATE_848"
- STATE_849:0 "STATE_849"
- STATE_850:0 "STATE_850"
- STATE_851:0 "STATE_851"
+ STATE_847:0 "Ёлын Ам"
+ STATE_848:0 "Дарь-Овоо"
+ STATE_849:0 "Отхон-Тэнгри"
+ STATE_850:0 "Алтан-Хохий"
+ STATE_851:0 "Суврага-Хайрхан"
  STATE_852:0 "STATE_852"
- STATE_853:0 "STATE_853"
- STATE_854:0 "STATE_854"
+ STATE_853:0 "Хумстай-Уулс"
+ STATE_854:0 "Богд-Хан"
  STATE_855:0 "STATE_855"
  STATE_856:0 "Бездна"
  STATE_857:0 "Буково"
@@ -1113,7 +1113,7 @@
  STATE_1112:0 "STATE_1112"
  STATE_1113:0 "STATE_1113"
  STATE_1114:0 "STATE_1114"
- STATE_1115:0 "STATE_1115"
+ STATE_1115:0 "Бурхан-Халдун"
  STATE_1116:0 "STATE_1116"
  STATE_1117:0 "STATE_1117"
  STATE_1118:0 "STATE_1118"
@@ -1169,25 +1169,25 @@
  STATE_1168:0 "STATE_1168"
  STATE_1169:0 "STATE_1169"
  STATE_1170:0 "STATE_1170"
- STATE_1171:0 "STATE_1171"
- STATE_1172:0 "STATE_1172"
- STATE_1173:0 "STATE_1173"
+ STATE_1171:0 "Караул"
+ STATE_1172:0 "Байшинт"
+ STATE_1173:0 "Тургэн"
  STATE_1174:0 "Йакистаун"
- STATE_1175:0 "STATE_1175"
- STATE_1176:0 "STATE_1176"
- STATE_1177:0 "STATE_1177"
- STATE_1178:0 "STATE_1178"
- STATE_1179:0 "STATE_1179"
- STATE_1180:0 "STATE_1180"
- STATE_1181:0 "STATE_1181"
- STATE_1182:0 "STATE_1182"
- STATE_1183:0 "STATE_1183"
- STATE_1184:0 "STATE_1184"
+ STATE_1175:0 "Булган"
+ STATE_1176:0 "Толбо"
+ STATE_1177:0 "Буренхайрхан"
+ STATE_1178:0 "Манхан"
+ STATE_1179:0 "Тонхил"
+ STATE_1180:0 "Чандмань"
+ STATE_1181:0 "Алтай"
+ STATE_1182:0 "Бигэр"
+ STATE_1183:0 "Баянлиг"
+ STATE_1184:0 "Улзийт"
  STATE_1185:0 "Сайхандейл"
- STATE_1186:0 "STATE_1186"
+ STATE_1186:0 "Ноён"
  STATE_1187:0 "STATE_1187"
- STATE_1188:0 "STATE_1188"
- STATE_1189:0 "STATE_1189"
+ STATE_1188:0 "Баяндалай"
+ STATE_1189:0 "Хүрмэн"
  STATE_1190:0 "Карсакаг"
  STATE_1191:0 "STATE_1191"
  STATE_1192:0 "STATE_1192"
@@ -1233,24 +1233,24 @@
  STATE_1232:0 "Сарлаг Хот"
  STATE_1233:0 "Сайхан Толгод"
  STATE_1234:0 "STATE_1234"
- STATE_1235:0 "STATE_1235"
- STATE_1236:0 "STATE_1236"
- STATE_1237:0 "STATE_1237"
+ STATE_1235:0 "Сутай-Хайрхан"
+ STATE_1236:0 "Даланзадгад"
+ STATE_1237:0 "Сайн-Шанд"
  STATE_1238:0 "STATE_1238"
  STATE_1239:0 "STATE_1239"
  STATE_1240:0 "STATE_1240"
  STATE_1241:0 "STATE_1241"
  STATE_1242:0 "STATE_1242"
  STATE_1243:0 "Моднихенди"
- STATE_1244:0 "STATE_1244"
+ STATE_1244:0 "Алтанширээ"
  STATE_1245:0 "STATE_1245"
  STATE_1246:0 "STATE_1246"
  STATE_1247:0 "STATE_1247"
  STATE_1248:0 "STATE_1248"
  STATE_1249:0 "STATE_1249"
  STATE_1250:0 "STATE_1250"
- STATE_1251:0 "STATE_1251"
- STATE_1252:0 "STATE_1252"
+ STATE_1251:0 "Дарьганга"
+ STATE_1252:0 "Эрдэнэцагаан"
  STATE_1253:0 "STATE_1253"
  STATE_1254:0 "Мёрон"
  STATE_1255:0 "Остров Овсянки"
@@ -1258,7 +1258,7 @@
  STATE_1257:0 "Клув Хот"
  STATE_1258:0 "STATE_1258"
  STATE_1259:0 "Зорау"
- STATE_1260:0 "STATE_1260"
+ STATE_1260:0 "Халхгол"
  STATE_1261:0 "STATE_1261"
  STATE_1262:0 "STATE_1262"
  STATE_1263:0 "STATE_1263"
