--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -654,9 +654,9 @@ VICTORY_POINTS_8915:0 "STATE_1263" #STATE_1263
 VICTORY_POINTS_5629:0 "STATE_1258" #STATE_1258
 VICTORY_POINTS_9535:0 "Зорау" #Sorau / STATE_1259
 VICTORY_POINTS_9501:0 "STATE_1259"
-VICTORY_POINTS_9447:0 "STATE_1252" #STATE_1252
+VICTORY_POINTS_9447:0 "Эрдэнэцагаан" #Erdenetsagaan
 VICTORY_POINTS_793:0 "Нагенхоф"
-VICTORY_POINTS_9286:0 "STATE_1260" #STATE_1260
+VICTORY_POINTS_9286:0 "Халхгол" #Khalkhgol
 VICTORY_POINTS_9172:0 "STATE_1253" #STATE_1253
 VICTORY_POINTS_9008:0 "STATE_1262" #STATE_1262
 VICTORY_POINTS_8704:0 "STATE_1264" #STATE_1264
@@ -802,34 +802,34 @@ VICTORY_POINTS_13653:0 "Южная Филлидельфия"
 #YAK - Yakistan ( Crossmountain Republic )
 VICTORY_POINTS_566:0 "Яктаун" #Yakistown
 VICTORY_POINTS_4103:0 "Южный Яктаун"
-VICTORY_POINTS_8858:0 "STATE_1171" #STATE_1171
-VICTORY_POINTS_8973:0 "STATE_1172" #STATE_1172
-VICTORY_POINTS_4813:0 "STATE_1173" #STATE_1173
-VICTORY_POINTS_9402:0 "STATE_1175" #STATE_1175
-VICTORY_POINTS_9201:0 "STATE_1176" #STATE_1176
-VICTORY_POINTS_9300:0 "STATE_1176.1"
-VICTORY_POINTS_9645:0 "STATE_1177" #STATE_1177
-VICTORY_POINTS_9270:0 "STATE_1178" #STATE_1178
-VICTORY_POINTS_9341:0 "STATE_1178.1"
-VICTORY_POINTS_1407:0 "STATE_1179" #STATE_1179
-VICTORY_POINTS_2707:0 "STATE_1180" #STATE_1180
-VICTORY_POINTS_9404:0 "STATE_1180.1"
-VICTORY_POINTS_9733:0 "STATE_1181" #STATE_1181
-VICTORY_POINTS_9436:0 "STATE_1182" #STATE_1182
-VICTORY_POINTS_94:0 "STATE_1182.1"
-VICTORY_POINTS_2356:0 "STATE_1183" #STATE_1183
-VICTORY_POINTS_9405:0 "STATE_1183.1"
-VICTORY_POINTS_1900:0 "STATE_1183.2"
-VICTORY_POINTS_9655:0 "STATE_1183.3"
-VICTORY_POINTS_9352:0 "STATE_1184" #STATE_1184
-VICTORY_POINTS_9314:0 "STATE_1184.1"
+VICTORY_POINTS_8858:0 "Караул" #Karaul
+VICTORY_POINTS_8973:0 "Байшинт" #Baishint
+VICTORY_POINTS_4813:0 "Тургэн" #Türgen
+VICTORY_POINTS_9402:0 "Булган" #Bulgan
+VICTORY_POINTS_9201:0 "Толбо" #Tolbo
+VICTORY_POINTS_9300:0 "Баян-Энгер"
+VICTORY_POINTS_9645:0 "Буренхайрхан" #Burenkhairkhan
+VICTORY_POINTS_9270:0 "Манхан" #Mankhan
+VICTORY_POINTS_9341:0 "Ховд"
+VICTORY_POINTS_1407:0 "Тонхил" #Tonkhil
+VICTORY_POINTS_2707:0 "Чандмань" #Chandmani
+VICTORY_POINTS_9404:0 "Баацагаан"
+VICTORY_POINTS_9733:0 "Алтай" #Altai
+VICTORY_POINTS_9436:0 "Бигэр" #Biger
+VICTORY_POINTS_94:0 "Тайшир"
+VICTORY_POINTS_2356:0 "Баянлиг" #Bayanlig
+VICTORY_POINTS_9405:0 "Жинст"
+VICTORY_POINTS_1900:0 "Гурвантэс"
+VICTORY_POINTS_9655:0 "Шивээ Хүрэн"
+VICTORY_POINTS_9352:0 "Улзийт" #Ölziit
+VICTORY_POINTS_9314:0 "Баянхонгор"
 VICTORY_POINTS_9431:0 "Сайхандейл" #Saihandale / STATE_1185
-VICTORY_POINTS_9846:0 "STATE_1186" #STATE_1186
+VICTORY_POINTS_9846:0 "Ноён" #Noyon
 VICTORY_POINTS_1948:0 "STATE_1187" #STATE_1187
 VICTORY_POINTS_9243:0 "STATE_1187.1"
 VICTORY_POINTS_4081:0 "STATE_1187.2"
-VICTORY_POINTS_9570:0 "STATE_1188" #STATE_1188
-VICTORY_POINTS_5525:0 "STATE_1189" #STATE_1189
+VICTORY_POINTS_9570:0 "Баяндалай" #Bayandalai
+VICTORY_POINTS_5525:0 "Хүрмэн" #Khürmen
 VICTORY_POINTS_9072:0 "Карсакаг" #Karsakag / STATE_1190
 VICTORY_POINTS_9160:0 "Западный Карсакаг"
 VICTORY_POINTS_9284:0 "STATE_1191" #STATE_1191
@@ -879,9 +879,9 @@ VICTORY_POINTS_2988:0 "STATE_1229" #STATE_1229
 VICTORY_POINTS_9061:0 "Сайхан Толгод" #Saihan Tolgod / STATE_1233
 VICTORY_POINTS_3695:0 "Северный Сайхан Толгод"
 VICTORY_POINTS_9086:0 "Западный Сайхан Толгод"
-VICTORY_POINTS_9476:0 "STATE_1236" #STATE_1236
-VICTORY_POINTS_9232:0 "STATE_1237" #STATE_1237
-VICTORY_POINTS_9386:0 "STATE_1237.1"
+VICTORY_POINTS_9476:0 "Даланзадгад" #Dalanzadgad
+VICTORY_POINTS_9232:0 "Сайн-Шанд" #Sainshand
+VICTORY_POINTS_9386:0 "Өргөн"
 VICTORY_POINTS_8482:0 "STATE_1238" #STATE_1238
 VICTORY_POINTS_8258:0 "STATE_1239" #STATE_1239
 VICTORY_POINTS_8505:0 "STATE_1240" #STATE_1240
@@ -891,7 +891,7 @@ VICTORY_POINTS_8503:0 "STATE_1241.1"
 VICTORY_POINTS_8751:0 "STATE_1242" #STATE_1242
 VICTORY_POINTS_8813:0 "Моднихенди" #Modnihendi / STATE_1243
 VICTORY_POINTS_8860:0 "Восточный Моднихенди"
-VICTORY_POINTS_2619:0 "STATE_1244" #STATE_1244
+VICTORY_POINTS_2619:0 "Алтанширээ" #Altanshiree
 VICTORY_POINTS_8726:0 "STATE_1245" #STATE_1245
 VICTORY_POINTS_5027:0 "STATE_1245.1"
 VICTORY_POINTS_9004:0 "STATE_1246" #STATE_1246
@@ -902,15 +902,15 @@ VICTORY_POINTS_9163:0 "STATE_1248.1"
 VICTORY_POINTS_9087:0 "STATE_1249" #STATE_1249
 VICTORY_POINTS_379:0 "STATE_1250" #STATE_1250
 VICTORY_POINTS_2344:0 "STATE_1250.1"
-VICTORY_POINTS_9265:0 "STATE_1251" #STATE_1251
-VICTORY_POINTS_9416:0 "STATE_1251.1"
-VICTORY_POINTS_9515:0 "STATE_1251.2"
+VICTORY_POINTS_9265:0 "Дарьганга" #Dariganga
+VICTORY_POINTS_9416:0 "Хатанбулаг"
+VICTORY_POINTS_9515:0 "Зүүнбаян"
 VICTORY_POINTS_2218:0 "Ойн Щилтджин" #Oin Shiltgeen / STATE_1256
 VICTORY_POINTS_5061:0 "Северный Ойн Щилтджин"
 VICTORY_POINTS_8942:0 "STATE_1261" #STATE_1261
 VICTORY_POINTS_9016:0 "Св. Йакская Роща"
 VICTORY_POINTS_1760:0 "STATE_1266" #STATE_1266
-VICTORY_POINTS_9136:0 "STATE_847" #STATE_847
+VICTORY_POINTS_9136:0 "Ёлын Ам" #Yolyn Am
 VICTORY_POINTS_7945:0 "STATE_852" #STATE_852
 
 #TTT - Doglum's passage
