--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -850,7 +850,7 @@
  STATE_849:0 "Otgontenger"
  STATE_850:0 "Altan-Hohii"
  STATE_851:0 "Suvraga Khairkhan"
- STATE_852:0 "STATE_852"
+ STATE_852:0 "Tsagaan-Üür"
  STATE_853:0 "Humstay-Uuls"
  STATE_854:0 "Bogd Khan"
  STATE_855:0 "STATE_855"
@@ -1185,34 +1185,34 @@
  STATE_1184:0 "Ölziit"
  STATE_1185:0 "Saihandale"
  STATE_1186:0 "Noyon"
- STATE_1187:0 "STATE_1187"
+ STATE_1187:0 "Bayanjargalan"
  STATE_1188:0 "Bayandalai"
  STATE_1189:0 "Khürmen"
  STATE_1190:0 "Karsakag"
- STATE_1191:0 "STATE_1191"
- STATE_1192:0 "STATE_1192"
- STATE_1193:0 "STATE_1193"
- STATE_1194:0 "STATE_1194"
- STATE_1195:0 "STATE_1195"
+ STATE_1191:0 "Mörön"
+ STATE_1192:0 "Ider"
+ STATE_1193:0 "Tosontsengel"
+ STATE_1194:0 "Bürentogtokh"
+ STATE_1195:0 "Khatgal"
  STATE_1196:0 "STATE_1196"
- STATE_1197:0 "STATE_1197"
- STATE_1198:0 "STATE_1198"
+ STATE_1197:0 "Hadhaliin"
+ STATE_1198:0 "Renchinlkhümbe"
  STATE_1199:0 "STATE_1199"
  STATE_1200:0 "Khereh Davsag"
- STATE_1201:0 "STATE_1201"
- STATE_1202:0 "STATE_1202"
- STATE_1203:0 "STATE_1203"
- STATE_1204:0 "STATE_1204"
- STATE_1205:0 "STATE_1205"
- STATE_1206:0 "STATE_1206"
- STATE_1207:0 "STATE_1207"
+ STATE_1201:0 "Chandmani-Öndör"
+ STATE_1202:0 "Khankh"
+ STATE_1203:0 "Aldarkhaan"
+ STATE_1204:0 "Burgaasa"
+ STATE_1205:0 "Otgon"
+ STATE_1206:0 "Altanbulag"
+ STATE_1207:0 "Bayanmönkh"
  STATE_1208:0 "Gol Güür"
- STATE_1209:0 "STATE_1209"
+ STATE_1209:0 "Tsagaankhairkhan"
  STATE_1210:0 "Tuuraikhan"
- STATE_1211:0 "STATE_1211"
- STATE_1212:0 "STATE_1212"
+ STATE_1211:0 "Guchin-Us"
+ STATE_1212:0 "Uliastai"
  STATE_1213:0 "Nokhorsag Oi"
- STATE_1214:0 "STATE_1214"
+ STATE_1214:0 "Batshireet"
  STATE_1215:0 "STATE_1215"
  STATE_1216:0 "Röhrig"
  STATE_1217:0 "STATE_1217"
@@ -1227,31 +1227,31 @@
  STATE_1226:0 "STATE_1226"
  STATE_1227:0 "STATE_1227"
  STATE_1228:0 "STATE_1228"
- STATE_1229:0 "STATE_1229"
+ STATE_1229:0 "Bayan-Uul"
  STATE_1230:0 "Bara'dur"
- STATE_1231:0 "STATE_1231"
+ STATE_1231:0 "Khölönbuir"
  STATE_1232:0 "Sarlag Khot"
  STATE_1233:0 "Saihan Tolgod"
- STATE_1234:0 "STATE_1234"
+ STATE_1234:0 "Tsogt-Ovoo"
  STATE_1235:0 "Sutai-Hairhan"
  STATE_1236:0 "Dalanzadgad"
  STATE_1237:0 "Sainshand"
- STATE_1238:0 "STATE_1238"
- STATE_1239:0 "STATE_1239"
- STATE_1240:0 "STATE_1240"
- STATE_1241:0 "STATE_1241"
- STATE_1242:0 "STATE_1242"
+ STATE_1238:0 "Bayankhongor"
+ STATE_1239:0 "Chuluunkhoroot"
+ STATE_1240:0 "Dashbalbar"
+ STATE_1241:0 "Jargalan"
+ STATE_1242:0 "Mönkhkhaan"
  STATE_1243:0 "Modnihendi"
  STATE_1244:0 "Altanshiree"
- STATE_1245:0 "STATE_1245"
- STATE_1246:0 "STATE_1246"
- STATE_1247:0 "STATE_1247"
- STATE_1248:0 "STATE_1248"
- STATE_1249:0 "STATE_1249"
- STATE_1250:0 "STATE_1250"
+ STATE_1245:0 "Erdenetsogt"
+ STATE_1246:0 "Baatsagaan"
+ STATE_1247:0 "Bööngiin Hiid"
+ STATE_1248:0 "Tümentsogt"
+ STATE_1249:0 "Gurentsogt"
+ STATE_1250:0 "Baruun-Urt"
  STATE_1251:0 "Dariganga"
  STATE_1252:0 "Erdenetsagaan"
- STATE_1253:0 "STATE_1253"
+ STATE_1253:0 "Ul'dzeytu"
  STATE_1254:0 "Mörön"
  STATE_1255:0 "Oatmeal Island"
  STATE_1256:0 "Oin Shiltgeen"
@@ -1259,12 +1259,12 @@
  STATE_1258:0 "STATE_1258"
  STATE_1259:0 "Sorau"
  STATE_1260:0 "Khalkhgol"
- STATE_1261:0 "STATE_1261"
- STATE_1262:0 "STATE_1262"
+ STATE_1261:0 "Azakhachi"
+ STATE_1262:0 "Matad"
  STATE_1263:0 "STATE_1263"
- STATE_1264:0 "STATE_1264"
+ STATE_1264:0 "Tsagaan bulag"
  STATE_1265:0 "STATE_1265"
- STATE_1266:0 "STATE_1266"
+ STATE_1266:0 "Khavirga"
  STATE_1267:0 "West Uchte"
  STATE_1268:0 "STATE_1268"
  STATE_1269:0 "STATE_1269"
