--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -850,7 +850,7 @@
  STATE_849:0 "Отхон-Тэнгри"
  STATE_850:0 "Алтан-Хохий"
  STATE_851:0 "Суврага-Хайрхан"
- STATE_852:0 "STATE_852"
+ STATE_852:0 "Цагаан-Үүр"
  STATE_853:0 "Хумстай-Уулс"
  STATE_854:0 "Богд-Хан"
  STATE_855:0 "STATE_855"
@@ -1185,34 +1185,34 @@
  STATE_1184:0 "Улзийт"
  STATE_1185:0 "Сайхандейл"
  STATE_1186:0 "Ноён"
- STATE_1187:0 "STATE_1187"
+ STATE_1187:0 "Баянжаргалан"
  STATE_1188:0 "Баяндалай"
  STATE_1189:0 "Хүрмэн"
  STATE_1190:0 "Карсакаг"
- STATE_1191:0 "STATE_1191"
- STATE_1192:0 "STATE_1192"
- STATE_1193:0 "STATE_1193"
- STATE_1194:0 "STATE_1194"
- STATE_1195:0 "STATE_1195"
+ STATE_1191:0 "Мурэн"
+ STATE_1192:0 "Идэр"
+ STATE_1193:0 "Тосонцэнгэл"
+ STATE_1194:0 "Бүрэнтогтох"
+ STATE_1195:0 "Хатгал"
  STATE_1196:0 "STATE_1196"
- STATE_1197:0 "STATE_1197"
- STATE_1198:0 "STATE_1198"
+ STATE_1197:0 "Хадхалиин"
+ STATE_1198:0 "Рэнчинлхүмбэ"
  STATE_1199:0 "STATE_1199"
  STATE_1200:0 "Керех Давсаг"
- STATE_1201:0 "STATE_1201"
- STATE_1202:0 "STATE_1202"
- STATE_1203:0 "STATE_1203"
- STATE_1204:0 "STATE_1204"
- STATE_1205:0 "STATE_1205"
- STATE_1206:0 "STATE_1206"
- STATE_1207:0 "STATE_1207"
+ STATE_1201:0 "Чандмань-Өндөр"
+ STATE_1202:0 "Ханх"
+ STATE_1203:0 "Алдархаан"
+ STATE_1204:0 "Бургааса"
+ STATE_1205:0 "Отгон"
+ STATE_1206:0 "Алтанбулаг"
+ STATE_1207:0 "Баянмөнх"
  STATE_1208:0 "Гол Гюур"
- STATE_1209:0 "STATE_1209"
+ STATE_1209:0 "Цагаанхайрхан"
  STATE_1210:0 "Туурайхан"
- STATE_1211:0 "STATE_1211"
- STATE_1212:0 "STATE_1212"
+ STATE_1211:0 "Гучин-Ус"
+ STATE_1212:0 "Улиастай"
  STATE_1213:0 "Нокхорсаг Ой"
- STATE_1214:0 "STATE_1214"
+ STATE_1214:0 "Батширээт"
  STATE_1215:0 "STATE_1215"
  STATE_1216:0 "Рёриг"
  STATE_1217:0 "STATE_1217"
@@ -1227,31 +1227,31 @@
  STATE_1226:0 "STATE_1226"
  STATE_1227:0 "STATE_1227"
  STATE_1228:0 "STATE_1228"
- STATE_1229:0 "STATE_1229"
+ STATE_1229:0 "Баян-Уул"
  STATE_1230:0 "Бара'дур"
- STATE_1231:0 "STATE_1231"
+ STATE_1231:0 "Хөлөнбуйр"
  STATE_1232:0 "Сарлаг Хот"
  STATE_1233:0 "Сайхан Толгод"
- STATE_1234:0 "STATE_1234"
+ STATE_1234:0 "Цогт-Овоо"
  STATE_1235:0 "Сутай-Хайрхан"
  STATE_1236:0 "Даланзадгад"
  STATE_1237:0 "Сайн-Шанд"
- STATE_1238:0 "STATE_1238"
- STATE_1239:0 "STATE_1239"
- STATE_1240:0 "STATE_1240"
- STATE_1241:0 "STATE_1241"
- STATE_1242:0 "STATE_1242"
+ STATE_1238:0 "Баянхонгор"
+ STATE_1239:0 "Чулуунхороот"
+ STATE_1240:0 "Дашбалбар"
+ STATE_1241:0 "Жаргалан"
+ STATE_1242:0 "Мөнххаан"
  STATE_1243:0 "Моднихенди"
  STATE_1244:0 "Алтанширээ"
- STATE_1245:0 "STATE_1245"
- STATE_1246:0 "STATE_1246"
- STATE_1247:0 "STATE_1247"
- STATE_1248:0 "STATE_1248"
- STATE_1249:0 "STATE_1249"
- STATE_1250:0 "STATE_1250"
+ STATE_1245:0 "Эрдэнэцогт"
+ STATE_1246:0 "Баацагаан"
+ STATE_1247:0 "Бүнгин Хиид"
+ STATE_1248:0 "Түмэнцогт"
+ STATE_1249:0 "Гуренцогт"
+ STATE_1250:0 "Баруун-Урт"
  STATE_1251:0 "Дарьганга"
  STATE_1252:0 "Эрдэнэцагаан"
- STATE_1253:0 "STATE_1253"
+ STATE_1253:0 "Ульдзейту"
  STATE_1254:0 "Мёрон"
  STATE_1255:0 "Остров Овсянки"
  STATE_1256:0 "Ойн Щилтджин"
@@ -1259,12 +1259,12 @@
  STATE_1258:0 "STATE_1258"
  STATE_1259:0 "Зорау"
  STATE_1260:0 "Халхгол"
- STATE_1261:0 "STATE_1261"
- STATE_1262:0 "STATE_1262"
+ STATE_1261:0 "Азовхачи"
+ STATE_1262:0 "Матад"
  STATE_1263:0 "STATE_1263"
- STATE_1264:0 "STATE_1264"
+ STATE_1264:0 "Цагаан Булаг"
  STATE_1265:0 "STATE_1265"
- STATE_1266:0 "STATE_1266"
+ STATE_1266:0 "Хавирга"
  STATE_1267:0 "Западный Ухте"
  STATE_1268:0 "STATE_1268"
  STATE_1269:0 "STATE_1269"
