--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -657,9 +657,9 @@ VICTORY_POINTS_9501:0 "STATE_1259"
 VICTORY_POINTS_9447:0 "Эрдэнэцагаан" #Erdenetsagaan
 VICTORY_POINTS_793:0 "Нагенхоф"
 VICTORY_POINTS_9286:0 "Халхгол" #Khalkhgol
-VICTORY_POINTS_9172:0 "STATE_1253" #STATE_1253
-VICTORY_POINTS_9008:0 "STATE_1262" #STATE_1262
-VICTORY_POINTS_8704:0 "STATE_1264" #STATE_1264
+VICTORY_POINTS_9172:0 "Ульдзейту" #Ul'dzeytu / STATE_1253
+VICTORY_POINTS_9008:0 "Матад" #Matad / STATE_1262
+VICTORY_POINTS_8704:0 "Цагаан Булаг" #Tsagaan bulag / STATE_1264
 VICTORY_POINTS_8417:0 "STATE_1265" #STATE_1265
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Зеркшед Скалл" #Zerkshed Skäll / STATE_950
@@ -800,118 +800,118 @@ VICTORY_POINTS_13653:0 "Южная Филлидельфия"
 #######################################################################
 #VICTORY_POINTS_:0 ""
 #YAK - Yakistan ( Crossmountain Republic )
-VICTORY_POINTS_566:0 "Яктаун" #Yakistown
+VICTORY_POINTS_566:0 "Яктаун" #Yakistown / STATE_1174
 VICTORY_POINTS_4103:0 "Южный Яктаун"
-VICTORY_POINTS_8858:0 "Караул" #Karaul
-VICTORY_POINTS_8973:0 "Байшинт" #Baishint
-VICTORY_POINTS_4813:0 "Тургэн" #Türgen
-VICTORY_POINTS_9402:0 "Булган" #Bulgan
-VICTORY_POINTS_9201:0 "Толбо" #Tolbo
+VICTORY_POINTS_8858:0 "Караул" #Karaul / STATE_1171
+VICTORY_POINTS_8973:0 "Байшинт" #Baishint / STATE_1172
+VICTORY_POINTS_4813:0 "Тургэн" #Türgen / STATE_1173
+VICTORY_POINTS_9402:0 "Булган" #Bulgan / STATE_1175
+VICTORY_POINTS_9201:0 "Толбо" #Tolbo / STATE_1176
 VICTORY_POINTS_9300:0 "Баян-Энгер"
-VICTORY_POINTS_9645:0 "Буренхайрхан" #Burenkhairkhan
-VICTORY_POINTS_9270:0 "Манхан" #Mankhan
+VICTORY_POINTS_9645:0 "Буренхайрхан" #Burenkhairkhan / STATE_1177
+VICTORY_POINTS_9270:0 "Манхан" #Mankhan / STATE_1178
 VICTORY_POINTS_9341:0 "Ховд"
-VICTORY_POINTS_1407:0 "Тонхил" #Tonkhil
-VICTORY_POINTS_2707:0 "Чандмань" #Chandmani
+VICTORY_POINTS_1407:0 "Тонхил" #Tonkhil / STATE_1179
+VICTORY_POINTS_2707:0 "Чандмань" #Chandmani / STATE_1180
 VICTORY_POINTS_9404:0 "Баацагаан"
-VICTORY_POINTS_9733:0 "Алтай" #Altai
-VICTORY_POINTS_9436:0 "Бигэр" #Biger
+VICTORY_POINTS_9733:0 "Алтай" #Altai / STATE_1181
+VICTORY_POINTS_9436:0 "Бигэр" #Biger / STATE_1182
 VICTORY_POINTS_94:0 "Тайшир"
-VICTORY_POINTS_2356:0 "Баянлиг" #Bayanlig
+VICTORY_POINTS_2356:0 "Баянлиг" #Bayanlig / STATE_1183
 VICTORY_POINTS_9405:0 "Жинст"
 VICTORY_POINTS_1900:0 "Гурвантэс"
 VICTORY_POINTS_9655:0 "Шивээ Хүрэн"
-VICTORY_POINTS_9352:0 "Улзийт" #Ölziit
+VICTORY_POINTS_9352:0 "Улзийт" #Ölziit / STATE_1184
 VICTORY_POINTS_9314:0 "Баянхонгор"
 VICTORY_POINTS_9431:0 "Сайхандейл" #Saihandale / STATE_1185
-VICTORY_POINTS_9846:0 "Ноён" #Noyon
-VICTORY_POINTS_1948:0 "STATE_1187" #STATE_1187
-VICTORY_POINTS_9243:0 "STATE_1187.1"
-VICTORY_POINTS_4081:0 "STATE_1187.2"
-VICTORY_POINTS_9570:0 "Баяндалай" #Bayandalai
-VICTORY_POINTS_5525:0 "Хүрмэн" #Khürmen
+VICTORY_POINTS_9846:0 "Ноён" #Noyon / STATE_1186
+VICTORY_POINTS_1948:0 "Баянжаргалан" #Bayanjargalan / STATE_1187
+VICTORY_POINTS_9243:0 "Херленгин Ден"
+VICTORY_POINTS_4081:0 "Дсун Хуре"
+VICTORY_POINTS_9570:0 "Баяндалай" #Bayandalai / STATE_1188
+VICTORY_POINTS_5525:0 "Хүрмэн" #Khürmen / STATE_1189
 VICTORY_POINTS_9072:0 "Карсакаг" #Karsakag / STATE_1190
 VICTORY_POINTS_9160:0 "Западный Карсакаг"
-VICTORY_POINTS_9284:0 "STATE_1191" #STATE_1191
-VICTORY_POINTS_9219:0 "STATE_1191.1"
-VICTORY_POINTS_9014:0 "STATE_1192" #STATE_1192
-VICTORY_POINTS_3579:0 "STATE_1192.1"
-VICTORY_POINTS_5364:0 "STATE_1193" #STATE_1193
-VICTORY_POINTS_8912:0 "STATE_1193.1"
-VICTORY_POINTS_8891:0 "STATE_1194" #STATE_1194
-VICTORY_POINTS_2726:0 "STATE_1195" #STATE_1195
-VICTORY_POINTS_2810:0 "STATE_1195.1"
-VICTORY_POINTS_8659:0 "STATE_1195.2"
-VICTORY_POINTS_8620:0 "STATE_1197" #STATE_1197
-VICTORY_POINTS_8326:0 "STATE_1198" #STATE_1198
+VICTORY_POINTS_9284:0 "Мурэн" #Mörön / STATE_1191
+VICTORY_POINTS_9219:0 "Тэлмэн"
+VICTORY_POINTS_9014:0 "Идэр" #Ider / STATE_1192
+VICTORY_POINTS_3579:0 "Наран"
+VICTORY_POINTS_5364:0 "Тосонцэнгэл" #Tosontsengel / STATE_1193
+VICTORY_POINTS_8912:0 "Теелиин"
+VICTORY_POINTS_8891:0 "Бурэнтогтох" #Bürentogtokh / STATE_1194
+VICTORY_POINTS_2726:0 "Хатгал" #Khatgal / STATE_1195
+VICTORY_POINTS_2810:0 "Северный Хатгал"
+VICTORY_POINTS_8659:0 "Восточный Хатгал"
+VICTORY_POINTS_8620:0 "Хадхалиин" #Hadhaliin / STATE_1197
+VICTORY_POINTS_8326:0 "Рэнчинлхүмбэ" #Renchinlkhümbe / STATE_1198
 VICTORY_POINTS_225:0 "Керех Давсаг" #Khereh Davsag / STATE_1200
-VICTORY_POINTS_1356:0 "STATE_1201" #STATE_1201
-VICTORY_POINTS_8391:0 "STATE_1201.1"
-VICTORY_POINTS_4364:0 "STATE_1202" #STATE_1202
-VICTORY_POINTS_8521:0 "STATE_1203" #STATE_1203
-VICTORY_POINTS_8415:0 "STATE_1203.1"
-VICTORY_POINTS_8099:0 "STATE_1204" #STATE_1204
-VICTORY_POINTS_8502:0 "STATE_1205" #STATE_1205
-VICTORY_POINTS_7946:0 "STATE_1206" #STATE_1206
-VICTORY_POINTS_9073:0 "STATE_1207" #STATE_1207
-VICTORY_POINTS_8961:0 "STATE_1207.1"
-VICTORY_POINTS_8941:0 "STATE_1207.2"
-VICTORY_POINTS_8796:0 "STATE_1207.3"
-VICTORY_POINTS_1022:0 "STATE_1209" #STATE_1209
+VICTORY_POINTS_1356:0 "Чандмань-Өндөр" #Chandmani-Öndör / STATE_1201
+VICTORY_POINTS_8391:0 "Хүрее"
+VICTORY_POINTS_4364:0 "Ханх" #Khankh / STATE_1202
+VICTORY_POINTS_8521:0 "Алдархаан" #Aldarkhaan / STATE_1203
+VICTORY_POINTS_8415:0 "Дорволджин"
+VICTORY_POINTS_8099:0 "Бургааса" #Burgaasa / STATE_1204
+VICTORY_POINTS_8502:0 "Отгон" #Otgon / STATE_1205
+VICTORY_POINTS_7946:0 "Алтанбулаг" #Altanbulag / STATE_1206
+VICTORY_POINTS_9073:0 "Баянмөнх" #Bayanmönkh / STATE_1207
+VICTORY_POINTS_8961:0 "Дзараа Хид"
+VICTORY_POINTS_8941:0 "Бугайин"
+VICTORY_POINTS_8796:0 "Цамба Хид"
+VICTORY_POINTS_1022:0 "Цагаанхайрхан" #Tsagaankhairkhan / STATE_1209
 VICTORY_POINTS_4442:0 "Гол Гюур" #Gol Güür / STATE_1208
 VICTORY_POINTS_3102:0 "Восточный Гол Гюур"
 VICTORY_POINTS_3517:0 "Туурайхан" #Tuuraikhan / STATE_1210
-VICTORY_POINTS_8975:0 "STATE_1211" #STATE_1211
-VICTORY_POINTS_8845:0 "STATE_1211.1"
-VICTORY_POINTS_1091:0 "STATE_1212" #STATE_1212
-VICTORY_POINTS_1339:0 "STATE_1212.1"
-VICTORY_POINTS_8100:0 "STATE_1214" #STATE_1214
+VICTORY_POINTS_8975:0 "Гучин-Ус" #Guchin-Us / STATE_1211
+VICTORY_POINTS_8845:0 "Гюннарийн"
+VICTORY_POINTS_1091:0 "Улиастай" #Uliastai / STATE_1212
+VICTORY_POINTS_1339:0 "Ургамал"
+VICTORY_POINTS_8100:0 "Батширээт" #Batshireet / STATE_1214
 VICTORY_POINTS_8846:0 "Нокхорсаг Ой" #Nokhorsag Oi / STATE_1213
-VICTORY_POINTS_3092:0 "STATE_1234" #STATE_1234
-VICTORY_POINTS_9202:0 "STATE_1234.1"
+VICTORY_POINTS_3092:0 "Цогт-Овоо" #Tsogt-Ovoo / STATE_1234
+VICTORY_POINTS_9202:0 "Абараха"
 VICTORY_POINTS_1094:0 "Бара'дур" #Bara'dur / STATE_1230
-VICTORY_POINTS_1172:0 "STATE_1231" #STATE_1231
-VICTORY_POINTS_8441:0 "STATE_1231.1"
+VICTORY_POINTS_1172:0 "Хөлөнбуйр" #Khölönbuir / STATE_1231
+VICTORY_POINTS_8441:0 "Идермег"
 VICTORY_POINTS_1080:0 "Сарлаг Хот" #Sarlag Khot / STATE_1232
 VICTORY_POINTS_8798:0 "Западный Сарлаг Хот"
 VICTORY_POINTS_5119:0 "Восточный Сарлаг Хот"
-VICTORY_POINTS_2988:0 "STATE_1229" #STATE_1229
+VICTORY_POINTS_2988:0 "Баян-Уул" #Bayan-Uul / STATE_1229
 VICTORY_POINTS_9061:0 "Сайхан Толгод" #Saihan Tolgod / STATE_1233
 VICTORY_POINTS_3695:0 "Северный Сайхан Толгод"
 VICTORY_POINTS_9086:0 "Западный Сайхан Толгод"
-VICTORY_POINTS_9476:0 "Даланзадгад" #Dalanzadgad
+VICTORY_POINTS_9476:0 "Даланзадгад" #Dalanzadgad / STATE_1236
 VICTORY_POINTS_9232:0 "Сайн-Шанд" #Sainshand
 VICTORY_POINTS_9386:0 "Өргөн"
-VICTORY_POINTS_8482:0 "STATE_1238" #STATE_1238
-VICTORY_POINTS_8258:0 "STATE_1239" #STATE_1239
-VICTORY_POINTS_8505:0 "STATE_1240" #STATE_1240
-VICTORY_POINTS_8459:0 "STATE_1240.1"
-VICTORY_POINTS_8591:0 "STATE_1241" #STATE_1241
-VICTORY_POINTS_8503:0 "STATE_1241.1"
-VICTORY_POINTS_8751:0 "STATE_1242" #STATE_1242
+VICTORY_POINTS_8482:0 "Баянхонгор" #Bayankhongor / STATE_1238
+VICTORY_POINTS_8258:0 "Чулуунхороот" #Chuluunkhoroot / STATE_1239
+VICTORY_POINTS_8505:0 "Дашбалбар" #Dashbalbar / STATE_1240
+VICTORY_POINTS_8459:0 "Баяндун"
+VICTORY_POINTS_8591:0 "Жаргалан" #Jargalan / STATE_1241
+VICTORY_POINTS_8503:0 "Чулуут"
+VICTORY_POINTS_8751:0 "Мөнххаан" #Mönkhkhaan / STATE_1242
 VICTORY_POINTS_8813:0 "Моднихенди" #Modnihendi / STATE_1243
 VICTORY_POINTS_8860:0 "Восточный Моднихенди"
-VICTORY_POINTS_2619:0 "Алтанширээ" #Altanshiree
-VICTORY_POINTS_8726:0 "STATE_1245" #STATE_1245
-VICTORY_POINTS_5027:0 "STATE_1245.1"
-VICTORY_POINTS_9004:0 "STATE_1246" #STATE_1246
-VICTORY_POINTS_8928:0 "STATE_1246.1"
-VICTORY_POINTS_9138:0 "STATE_1247" #STATE_1247
-VICTORY_POINTS_9036:0 "STATE_1248" #STATE_1248
-VICTORY_POINTS_9163:0 "STATE_1248.1"
-VICTORY_POINTS_9087:0 "STATE_1249" #STATE_1249
-VICTORY_POINTS_379:0 "STATE_1250" #STATE_1250
-VICTORY_POINTS_2344:0 "STATE_1250.1"
-VICTORY_POINTS_9265:0 "Дарьганга" #Dariganga
+VICTORY_POINTS_2619:0 "Алтанширээ" #Altanshiree / STATE_1244
+VICTORY_POINTS_8726:0 "Эрдэнэцогт" #Erdenetsogt / STATE_1245
+VICTORY_POINTS_5027:0 "Баянтумэн"
+VICTORY_POINTS_9004:0 "Баацагаан" #Baatsagaan / STATE_1246
+VICTORY_POINTS_8928:0 "Исун-зүру"
+VICTORY_POINTS_9138:0 "Бүнгин Хиид" #Bööngiin Hiid / STATE_1247
+VICTORY_POINTS_9036:0 "Түмэнцогт" #Tümentsogt / STATE_1248
+VICTORY_POINTS_9163:0 "Ханхехий"
+VICTORY_POINTS_9087:0 "Гуренцогт" #Gurentsogt / STATE_1249
+VICTORY_POINTS_379:0 "Баруун-Урт" #Baruun-Urt / STATE_1250
+VICTORY_POINTS_2344:0 "Сүхбаатар"
+VICTORY_POINTS_9265:0 "Дарьганга" #Dariganga / STATE_1251
 VICTORY_POINTS_9416:0 "Хатанбулаг"
 VICTORY_POINTS_9515:0 "Зүүнбаян"
 VICTORY_POINTS_2218:0 "Ойн Щилтджин" #Oin Shiltgeen / STATE_1256
 VICTORY_POINTS_5061:0 "Северный Ойн Щилтджин"
-VICTORY_POINTS_8942:0 "STATE_1261" #STATE_1261
+VICTORY_POINTS_8942:0 "Азовхачи" #Azakhachi / STATE_1261
 VICTORY_POINTS_9016:0 "Св. Йакская Роща"
-VICTORY_POINTS_1760:0 "STATE_1266" #STATE_1266
-VICTORY_POINTS_9136:0 "Ёлын Ам" #Yolyn Am
-VICTORY_POINTS_7945:0 "STATE_852" #STATE_852
+VICTORY_POINTS_1760:0 "Хавирга" #Khavirga / STATE_1266
+VICTORY_POINTS_9136:0 "Ёлын Ам" #Yolyn Am / STATE_847
+VICTORY_POINTS_7945:0 "Цагаан-Үүр" #Tsagaan-Üür / STATE_852
 
 #TTT - Doglum's passage
 VICTORY_POINTS_9752:0 "STATE_811" #STATE_811
