--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -656,10 +656,10 @@ VICTORY_POINTS_9535:0 "Sorau" #Sorau / STATE_1259
 VICTORY_POINTS_9501:0 "STATE_1259"
 VICTORY_POINTS_9447:0 "Erdenetsagaan" #Erdenetsagaan
 VICTORY_POINTS_793:0 "Nagenhof"
-VICTORY_POINTS_9286:0 "Khalkhgol" #Khalkhgol
-VICTORY_POINTS_9172:0 "STATE_1253" #STATE_1253
-VICTORY_POINTS_9008:0 "STATE_1262" #STATE_1262
-VICTORY_POINTS_8704:0 "STATE_1264" #STATE_1264
+VICTORY_POINTS_9286:0 "Khalkhgol" #Khalkhgol / STATE_950
+VICTORY_POINTS_9172:0 "Ul'dzeytu" #Ul'dzeytu / STATE_1253
+VICTORY_POINTS_9008:0 "Matad" #Matad / STATE_1262
+VICTORY_POINTS_8704:0 "Tsagaan bulag" #Tsagaan bulag / STATE_1264 
 VICTORY_POINTS_8417:0 "STATE_1265" #STATE_1265
 #MRF - Monarchist Restoration Front
 VICTORY_POINTS_3065:0 "Zerkshed Skäll" #Zerkshed Skäll / STATE_950
@@ -800,118 +800,118 @@ VICTORY_POINTS_13653:0 "South Fillydelphia"
 #######################################################################
 #VICTORY_POINTS_:0 ""
 #YAK - Yakistan ( Crossmountain Republic )
-VICTORY_POINTS_566:0 "Yakistown" #Yakistown
+VICTORY_POINTS_566:0 "Yakistown" #Yakistown / STATE_1174
 VICTORY_POINTS_4103:0 "South Yakistown"
-VICTORY_POINTS_8858:0 "Karaul" #Karaul
-VICTORY_POINTS_8973:0 "Baishint" #Baishint
-VICTORY_POINTS_4813:0 "Türgen" #Türgen
-VICTORY_POINTS_9402:0 "Bulgan" #Bulgan
-VICTORY_POINTS_9201:0 "Tolbo" #Tolbo
+VICTORY_POINTS_8858:0 "Karaul" #Karaul / STATE_1171
+VICTORY_POINTS_8973:0 "Baishint" #Baishint / STATE_1172
+VICTORY_POINTS_4813:0 "Türgen" #Türgen / STATE_1173
+VICTORY_POINTS_9402:0 "Bulgan" #Bulgan / STATE_1175
+VICTORY_POINTS_9201:0 "Tolbo" #Tolbo / STATE_1176
 VICTORY_POINTS_9300:0 "Bayan-Enger"
-VICTORY_POINTS_9645:0 "Burenkhairkhan" #Burenkhairkhan
-VICTORY_POINTS_9270:0 "Mankhan" #Mankhan
+VICTORY_POINTS_9645:0 "Burenkhairkhan" #Burenkhairkhan / STATE_1177
+VICTORY_POINTS_9270:0 "Mankhan" #Mankhan / STATE_1178
 VICTORY_POINTS_9341:0 "Khovd"
-VICTORY_POINTS_1407:0 "Tonkhil" #Tonkhil
-VICTORY_POINTS_2707:0 "Chandmani" #Chandmani
+VICTORY_POINTS_1407:0 "Tonkhil" #Tonkhil / STATE_1179
+VICTORY_POINTS_2707:0 "Chandmani" #Chandmani / STATE_1180
 VICTORY_POINTS_9404:0 "Baatsagaan"
-VICTORY_POINTS_9733:0 "Altai" #Altai
-VICTORY_POINTS_9436:0 "Biger" #Biger
+VICTORY_POINTS_9733:0 "Altai" #Altai / STATE_1181
+VICTORY_POINTS_9436:0 "Biger" #Biger / STATE_1182
 VICTORY_POINTS_94:0 "Taishir"
-VICTORY_POINTS_2356:0 "Bayanlig" #Bayanlig
+VICTORY_POINTS_2356:0 "Bayanlig" #Bayanlig / STATE_1183
 VICTORY_POINTS_9405:0 "Jinst"
 VICTORY_POINTS_1900:0 "Gurvantes"
 VICTORY_POINTS_9655:0 "Shivee Khuren"
-VICTORY_POINTS_9352:0 "Ölziit" #Ölziit
+VICTORY_POINTS_9352:0 "Ölziit" #Ölziit / STATE_1184
 VICTORY_POINTS_9314:0 "Bayankhongor"
 VICTORY_POINTS_9431:0 "Saihandale" #Saihandale / STATE_1185
-VICTORY_POINTS_9846:0 "Noyon" #Noyon
-VICTORY_POINTS_1948:0 "STATE_1187" #STATE_1187
-VICTORY_POINTS_9243:0 "STATE_1187.1"
-VICTORY_POINTS_4081:0 "STATE_1187.2"
-VICTORY_POINTS_9570:0 "Bayandalai" #Bayandalai
-VICTORY_POINTS_5525:0 "Khürmen" #Khürmen
+VICTORY_POINTS_9846:0 "Noyon" #Noyon / STATE_1186
+VICTORY_POINTS_1948:0 "Bayanjargalan" #Bayanjargalan / STATE_1187
+VICTORY_POINTS_9243:0 "Herelengiin Den"
+VICTORY_POINTS_4081:0 "Dsun Khure"
+VICTORY_POINTS_9570:0 "Bayandalai" #Bayandalai / STATE_1188
+VICTORY_POINTS_5525:0 "Khürmen" #Khürmen / STATE_1189
 VICTORY_POINTS_9072:0 "Karsakag" #Karsakag / STATE_1190
 VICTORY_POINTS_9160:0 "West Karsakag"
-VICTORY_POINTS_9284:0 "STATE_1191" #STATE_1191
-VICTORY_POINTS_9219:0 "STATE_1191.1"
-VICTORY_POINTS_9014:0 "STATE_1192" #STATE_1192
-VICTORY_POINTS_3579:0 "STATE_1192.1"
-VICTORY_POINTS_5364:0 "STATE_1193" #STATE_1193
-VICTORY_POINTS_8912:0 "STATE_1193.1"
-VICTORY_POINTS_8891:0 "STATE_1194" #STATE_1194
-VICTORY_POINTS_2726:0 "STATE_1195" #STATE_1195
-VICTORY_POINTS_2810:0 "STATE_1195.1"
-VICTORY_POINTS_8659:0 "STATE_1195.2"
-VICTORY_POINTS_8620:0 "STATE_1197" #STATE_1197
-VICTORY_POINTS_8326:0 "STATE_1198" #STATE_1198
+VICTORY_POINTS_9284:0 "Mörön" #Mörön / STATE_1191
+VICTORY_POINTS_9219:0 "Telmen"
+VICTORY_POINTS_9014:0 "Ider" #Ider / STATE_1192
+VICTORY_POINTS_3579:0 "Naran"
+VICTORY_POINTS_5364:0 "Tosontsengel" #Tosontsengel / STATE_1193
+VICTORY_POINTS_8912:0 "Teeliin"
+VICTORY_POINTS_8891:0 "Bürentogtokh" #Bürentogtokh / STATE_1194
+VICTORY_POINTS_2726:0 "Khatgal" #Khatgal / STATE_1195
+VICTORY_POINTS_2810:0 "Northern Khatgal"
+VICTORY_POINTS_8659:0 "Eastern Khatgal"
+VICTORY_POINTS_8620:0 "Hadhaliin" #Hadhaliin / STATE_1197
+VICTORY_POINTS_8326:0 "Renchinlkhümbe" #Renchinlkhümbe / STATE_1198
 VICTORY_POINTS_225:0 "Khereh Davsag" #Khereh Davsag / STATE_1200
-VICTORY_POINTS_1356:0 "STATE_1201" #STATE_1201
-VICTORY_POINTS_8391:0 "STATE_1201.1"
-VICTORY_POINTS_4364:0 "STATE_1202" #STATE_1202
-VICTORY_POINTS_8521:0 "STATE_1203" #STATE_1203
-VICTORY_POINTS_8415:0 "STATE_1203.1"
-VICTORY_POINTS_8099:0 "STATE_1204" #STATE_1204
-VICTORY_POINTS_8502:0 "STATE_1205" #STATE_1205
-VICTORY_POINTS_7946:0 "STATE_1206" #STATE_1206
-VICTORY_POINTS_9073:0 "STATE_1207" #STATE_1207
-VICTORY_POINTS_8961:0 "STATE_1207.1"
-VICTORY_POINTS_8941:0 "STATE_1207.2"
-VICTORY_POINTS_8796:0 "STATE_1207.3"
-VICTORY_POINTS_1022:0 "STATE_1209" #STATE_1209
+VICTORY_POINTS_1356:0 "Chandmani-Öndör" #Chandmani-Öndör / STATE_1201
+VICTORY_POINTS_8391:0 "Hüryee"
+VICTORY_POINTS_4364:0 "Khankh" #Khankh / STATE_1202
+VICTORY_POINTS_8521:0 "Aldarkhaan" #Aldarkhaan / STATE_1203
+VICTORY_POINTS_8415:0 "Dorvoljin"
+VICTORY_POINTS_8099:0 "Burgaasa" #Burgaasa / STATE_1204
+VICTORY_POINTS_8502:0 "Otgon" #Otgon / STATE_1205
+VICTORY_POINTS_7946:0 "Altanbulag" #Altanbulag / STATE_1206
+VICTORY_POINTS_9073:0 "Bayanmönkh" #Bayanmönkh / STATE_1207
+VICTORY_POINTS_8961:0 "Dzaraa Hid"
+VICTORY_POINTS_8941:0 "Bugaiin"
+VICTORY_POINTS_8796:0 "Tsamba Khid"
+VICTORY_POINTS_1022:0 "Tsagaankhairkhan" #Tsagaankhairkhan / STATE_1209
 VICTORY_POINTS_4442:0 "Gol Güür" #Gol Güür / STATE_1208
 VICTORY_POINTS_3102:0 "East Gol Güür"
 VICTORY_POINTS_3517:0 "Tuuraikhan" #Tuuraikhan / STATE_1210
-VICTORY_POINTS_8975:0 "STATE_1211" #STATE_1211
-VICTORY_POINTS_8845:0 "STATE_1211.1"
-VICTORY_POINTS_1091:0 "STATE_1212" #STATE_1212
-VICTORY_POINTS_1339:0 "STATE_1212.1"
-VICTORY_POINTS_8100:0 "STATE_1214" #STATE_1214
+VICTORY_POINTS_8975:0 "Guchin-Us" #Guchin-Us / STATE_1211
+VICTORY_POINTS_8845:0 "Günnariyn"
+VICTORY_POINTS_1091:0 "Uliastai" #Uliastai / STATE_1212
+VICTORY_POINTS_1339:0 "Urgamal"
+VICTORY_POINTS_8100:0 "Batshireet" #Batshireet / STATE_1214
 VICTORY_POINTS_8846:0 "Nokhorsag Oi" #Nokhorsag Oi / STATE_1213
-VICTORY_POINTS_3092:0 "STATE_1234" #STATE_1234
-VICTORY_POINTS_9202:0 "STATE_1234.1"
+VICTORY_POINTS_3092:0 "Tsogt-Ovoo" #Tsogt-Ovoo / STATE_1234
+VICTORY_POINTS_9202:0 "Abaraha"
 VICTORY_POINTS_1094:0 "Bara'dur" #Bara'dur / STATE_1230
-VICTORY_POINTS_1172:0 "STATE_1231" #STATE_1231
-VICTORY_POINTS_8441:0 "STATE_1231.1"
+VICTORY_POINTS_1172:0 "Khölönbuir" #Khölönbuir / STATE_1231
+VICTORY_POINTS_8441:0 "Idermeg"
 VICTORY_POINTS_1080:0 "Sarlag Khot" #Sarlag Khot / STATE_1232
 VICTORY_POINTS_8798:0 "West Sarlag Khot"
 VICTORY_POINTS_5119:0 "East Sarlag Khot"
-VICTORY_POINTS_2988:0 "STATE_1229" #STATE_1229
+VICTORY_POINTS_2988:0 "Bayan-Uul" #Bayan-Uul / STATE_1229
 VICTORY_POINTS_9061:0 "Saihan Tolgod" #Saihan Tolgod / STATE_1233
 VICTORY_POINTS_3695:0 "North Saihan Tolgod"
 VICTORY_POINTS_9086:0 "West Saihan Tolgod"
-VICTORY_POINTS_9476:0 "Dalanzadgad" #Dalanzadgad
+VICTORY_POINTS_9476:0 "Dalanzadgad" #Dalanzadgad / STATE_1236
 VICTORY_POINTS_9232:0 "Sainshand" #Sainshand
 VICTORY_POINTS_9386:0 "Örgön"
-VICTORY_POINTS_8482:0 "STATE_1238" #STATE_1238
-VICTORY_POINTS_8258:0 "STATE_1239" #STATE_1239
-VICTORY_POINTS_8505:0 "STATE_1240" #STATE_1240
-VICTORY_POINTS_8459:0 "STATE_1240.1"
-VICTORY_POINTS_8591:0 "STATE_1241" #STATE_1241
-VICTORY_POINTS_8503:0 "STATE_1241.1"
-VICTORY_POINTS_8751:0 "STATE_1242" #STATE_1242
+VICTORY_POINTS_8482:0 "Bayankhongor" #Bayankhongor / STATE_1238
+VICTORY_POINTS_8258:0 "Chuluunkhoroot" #Chuluunkhoroot / STATE_1239
+VICTORY_POINTS_8505:0 "Dashbalbar" #Dashbalbar / STATE_1240
+VICTORY_POINTS_8459:0 "Bayandun"
+VICTORY_POINTS_8591:0 "Jargalan" #Jargalan / STATE_1241
+VICTORY_POINTS_8503:0 "Chuluut"
+VICTORY_POINTS_8751:0 "Mönkhkhaan" #Mönkhkhaan / STATE_1242
 VICTORY_POINTS_8813:0 "Modnihendi" #Modnihendi / STATE_1243
 VICTORY_POINTS_8860:0 "East Modnihendi"
-VICTORY_POINTS_2619:0 "Altanshiree" #Altanshiree
-VICTORY_POINTS_8726:0 "STATE_1245" #STATE_1245
-VICTORY_POINTS_5027:0 "STATE_1245.1"
-VICTORY_POINTS_9004:0 "STATE_1246" #STATE_1246
-VICTORY_POINTS_8928:0 "STATE_1246.1"
-VICTORY_POINTS_9138:0 "STATE_1247" #STATE_1247
-VICTORY_POINTS_9036:0 "STATE_1248" #STATE_1248
-VICTORY_POINTS_9163:0 "STATE_1248.1"
-VICTORY_POINTS_9087:0 "STATE_1249" #STATE_1249
-VICTORY_POINTS_379:0 "STATE_1250" #STATE_1250
-VICTORY_POINTS_2344:0 "STATE_1250.1"
-VICTORY_POINTS_9265:0 "Dariganga" #Dariganga
+VICTORY_POINTS_2619:0 "Altanshiree" #Altanshiree / STATE_1244
+VICTORY_POINTS_8726:0 "Erdenetsogt" #Erdenetsogt / STATE_1245
+VICTORY_POINTS_5027:0 "Bayantümen"
+VICTORY_POINTS_9004:0 "Baatsagaan" #Baatsagaan / STATE_1246
+VICTORY_POINTS_8928:0 "Isun-zïru"
+VICTORY_POINTS_9138:0 "Bööngiin Hiid" #Bööngiin Hiid / STATE_1247
+VICTORY_POINTS_9036:0 "Tümentsogt" #Tümentsogt / STATE_1248
+VICTORY_POINTS_9163:0 "Hanhöhiy"
+VICTORY_POINTS_9087:0 "Gurentsogt" #Gurentsogt / STATE_1249
+VICTORY_POINTS_379:0 "Baruun-Urt" #Baruun-Urt / STATE_1250
+VICTORY_POINTS_2344:0 "Sühbaatar"
+VICTORY_POINTS_9265:0 "Dariganga" #Dariganga / STATE_1251
 VICTORY_POINTS_9416:0 "Khatanbulag"
 VICTORY_POINTS_9515:0 "Zuunbayan"
 VICTORY_POINTS_2218:0 "Oin Shiltgeen" #Oin Shiltgeen / STATE_1256
 VICTORY_POINTS_5061:0 "North Oin Shiltgeen"
-VICTORY_POINTS_8942:0 "STATE_1261" #STATE_1261
+VICTORY_POINTS_8942:0 "Azakhachi" #Azakhachi / STATE_1261
 VICTORY_POINTS_9016:0 "Holy Jak grove"
-VICTORY_POINTS_1760:0 "STATE_1266" #STATE_1266
-VICTORY_POINTS_9136:0 "Yolyn Am" #Yolyn Am
-VICTORY_POINTS_7945:0 "STATE_852" #STATE_852
+VICTORY_POINTS_1760:0 "Khavirga" #Khavirga / STATE_1266
+VICTORY_POINTS_9136:0 "Yolyn Am" #Yolyn Am / STATE_847
+VICTORY_POINTS_7945:0 "Tsagaan-Üür" #Tsagaan-Üür / STATE_852
 
 #TTT - Doglum's passage
 VICTORY_POINTS_9752:0 "STATE_811" #STATE_811
