Some Severiana events

--- a/localisation/english/country_SEV_l_english.yml
+++ b/localisation/english/country_SEV_l_english.yml
@@ -2,7 +2,8 @@
 #######################################################
 ##### STATE ###########################################
 #######################################################
-
+SEV_empress_alty:0 "Empress Altydia"
+SEV_smp:0 "Somepony"
 #######################################################
 ##### PARTIES #########################################
 #######################################################
@@ -26,25 +27,25 @@ SEV_start_desc:0 "New reports, problems..."
 severianian_crown:0 "Severianian Crown"
 severianian_crown_desc:0 ""
 
-no_talk_to_sinister:0 "Haven't talked"
-no_talk_to_nestor:0 "Haven't talked"
-no_talk_to_spiegel:0 "Haven't talked"
-no_talk_to_vasily:0 "Haven't talked"
-no_talk_to_danilka:0 "Haven't talked"
-no_talk_to_skorpin:0 "Haven't talked"
-no_talk_to_vinous:0 "Haven't talked"
-is_talking:0 "Already talking to somebody"
+#no_talk_to_sinister:0 "Haven't talked"
+#no_talk_to_nestor:0 "Haven't talked"
+#no_talk_to_spiegel:0 "Haven't talked"
+#no_talk_to_vasily:0 "Haven't talked"
+#no_talk_to_danilka:0 "Haven't talked"
+#no_talk_to_skorpin:0 "Haven't talked"
+#no_talk_to_vinous:0 "Haven't talked"
+#is_talking:0 "Already talking to somebody"
 #######################################################
 ##### DECISIONS #######################################
 #######################################################
-SEV_talks:0 "Talk to"
-SEV_talk_to_sinister:0 "Sinister Serov"
-SEV_talk_to_nestor:0 "Nestor Lunin"
-SEV_talk_to_spiegel:0 "Spike Spiegel"
-SEV_talk_to_vasily:0 "Vasily Pantsushenko"
-SEV_talk_to_danilka:0 "Danilka"
-SEV_talk_to_skorpin:0 "Yury Skorpin"
-SEV_talk_to_vinous:0 "Vinous Kostylev"
+#SEV_talks:0 "Talk to"
+#SEV_talk_to_sinister:0 "Sinister Serov"
+#SEV_talk_to_nestor:0 "Nestor Lunin"
+#SEV_talk_to_spiegel:0 "Spike Spiegel"
+#SEV_talk_to_vasily:0 "Vasily Pantsushenko"
+#SEV_talk_to_danilka:0 "Danilka"
+#SEV_talk_to_skorpin:0 "Yury Skorpin"
+#SEV_talk_to_vinous:0 "Vinous Kostylev"
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
@@ -52,30 +53,26 @@ severiana.0.t:0 "Start"
 severiana.0.d:0 ""
 severiana.0.a:0 "Let's go"
 
-severiana.1.t1:0 "Sinister says"
-severiana.1.d1:0 "HA HA HA HA HA"
-severiana.1.a1:0 "Thanks"
+severiana.1.t:0 "Nothing"
+severiana.1.d:0 ""
+severiana.1.a:0 "Thanks"
 
-severiana.2.t1:0 "Nestor says"
-severiana.2.d1:0 "HA HA HA HA HA"
-severiana.2.a1:0 "Thanks"
+severiana.2.t:0 "WIP"
+severiana.2.d:0 "WIP"
+severiana.2.a:0 "WIP"
 
-severiana.3.t:0 "Spiegel says"
-severiana.3.d:0 "HA HA HA HA HA"
-severiana.3.a:0 "Thanks"
+severiana.3.t:0 "WIP"
+severiana.3.d:0 "WIP"
+severiana.3.a:0 "WIP"
 
-severiana.4.t:0 "Vasily says"
-severiana.4.d:0 "HA HA HA HA HA"
-severiana.4.a:0 "Thanks"
+severiana.4.t:0 "WIP"
+severiana.4.d:0 "WIP"
+severiana.4.a:0 "WIP"
 
-severiana.5.t:0 "Danilka says"
-severiana.5.d:0 "HA HA HA HA HA"
-severiana.5.a:0 "Thanks"
+severiana.5.t:0 "WIP"
+severiana.5.d:0 "WIP"
+severiana.5.a:0 "WIP"
 
-severiana.6.t:0 "Skorpin says"
-severiana.6.d:0 "HA HA HA HA HA"
-severiana.6.a:0 "Thanks"
-
-severiana.7.t:0 "Vinous says"
-severiana.7.d:0 "HA HA HA HA HA"
-severiana.7.a:0 "Thanks"
+severiana.6.t:0 "WIP"
+severiana.6.d:0 "WIP"
+severiana.6.a:0 "WIP"
